chore: update docs content

--- a/docs/api-contract-tests.mdx
+++ b/docs/api-contract-tests.mdx
@@ -3,7 +3,16 @@ title: "Configure Custom API Contract Tests"
 description: "Learn how to generate contract and end-to-end tests for your API and SDKs using the Arazzo workflow specification."
 ---
 
+import { Callout } from '~/components';
 import { Tabs } from "@speakeasy/nextra-theme";
+
+<Callout title="EARLY ACCESS" variant="warning">
+
+  We highly recommend fully setting up SDK tests in all of your SDK repositories before moving on to exploring this.
+
+  Custom End-to-End API Contract Tests against live APIs is in an early feature set stage.
+
+</Callout>
 
 # Custom End-to-End API Contract Tests with Arazzo
 
