--- a/docs/code-samples/code-samples-api.mdx
+++ b/docs/code-samples/code-samples-api.mdx
@@ -59,57 +59,41 @@ For instructions on how to install and use the TypeScript SDK, refer to the
 #### The React Component
 
 This library includes a React component that fetches and highlights code
-snippets using [highlight.js], using React Query under the hood. Along with
-displaying the snippet, it shows a loading state during fetching and provides a
-fallback view if an error occurs.
+snippets using `codehike`. Along with displaying the snippet, it shows a
+loading state during fetching and provides a fallback view if an error occurs.
 
 The component can be used as follows:
 
 ```tsx App.tsx
 import { SpeakeasyCodeSamplesCore } from "@speakeasyapi/code-samples/core";
 import {
-  CodeSample,
+  CodeSampleFilenameTitle,
+  CodeSamplesViewer,
   SpeakeasyCodeSamplesProvider,
 } from "@speakeasyapi/code-samples/react";
-import { QueryClient, QueryClientProvider } from "@tanstack/react-query";
-
-const queryClient = new QueryClient();
 
 const speakeasyCodeSamples = new SpeakeasyCodeSamplesCore({
-  apiKey: "<SPEAKEASY_API_KEY_HERE>",
+  apiKey: "<YOUR_API_KEY_HERE>",
   registryUrl: "https://spec.speakeasy.com/org/ws/my-source",
-});
-
-// Retries are handled by the underlying SDK.
-queryClient.setQueryDefaults(["@speakeasyapi/code-samples"], { retry: false });
-
-queryClient.setMutationDefaults(["@speakeasyapi/code-samples"], {
-  retry: false,
 });
 
 function App() {
   return (
-    <QueryClientProvider client={queryClient}>
-      <SpeakeasyCodeSamplesProvider client={speakeasyCodeSamples}>
-        <CodeSample operationId="getPetById" language="typescript" />
-      </SpeakeasyCodeSamplesProvider>
-    </QueryClientProvider>
+    <SpeakeasyCodeSamplesProvider client={speakeasyCodeSamples}>
+      <CodeSamplesViewer
+        copyable
+        defaultLang={"typescript"}
+        title={CodeSampleFilenameTitle}
+        operation={"getPassageText"}
+        // client={speakeasyCodeSamples} 
+        // 👆 optional, if you want to pass the client directly 
+        // instead of using the context provider
+      />
+    </SpeakeasyCodeSamplesProvider>
   );
 }
 ```
 
-<div data-callout data-title="NOTE" data-variant="info">
-
-The rendered code snippet will not be styled. To style the rendered code
-snippet, add a highlight.js theme to theme project. Themes can be 
-downloaded from the [highlight.js GitHub Repository], and previewed on 
-their [demo page][highlight.js demo page].
-
-</div>
-
-[highlight.js]: https://highlightjs.org/
-[highlight.js demo page]: https://highlightjs.org/demo
-[highlight.js GitHub Repository]: https://github.com/highlightjs/highlight.js/tree/main/src/styles
 
 
 ## REST API Reference
@@ -120,18 +104,24 @@ their [demo page][highlight.js demo page].
 
 Retrieves usage snippets from an OpenAPI document stored in the registry. The endpoint supports filtering by programming language and operation ID.
 
-<h4 className="_tracking-tight _text-slate-900 dark:_text-white _mt-10 _text-h5-mobile md:_text-h5">Query Parameters</h4>
+<h4 className="_tracking-tight _text-slate-900 dark:_text-white _mt-10 _mb-4 _text-h5-mobile md:_text-h5">Query Parameters</h4>
 
-<div className="[&>table]:table-auto mt-6">
+**`registry_url`** <span className="text-xs font-secondary-mono text-brand-warning-500 ml-2">required, type: string</span>
+- **Description**: The registry URL from which to retrieve the snippets
+- **Example**: `https://spec.speakeasy.com/my-org/my-workspace/my-source`
 
-  | Parameter       | Type                                   | Required | Description                                          | Example                                                    |
-  | --------------- | ---------------------------------------| -------- | ---------------------------------------------------- | ---------------------------------------------------------- |
-  | `registry_url`  | `string`                               | Yes      | The registry URL from which to retrieve the snippets | `https://spec.speakeasy.com/my-org/my-workspace/my-source` |
-  | `operation_ids` | `string[]`                             | No       | The operation IDs to retrieve snippets for           | `getPets`                                                  |
-  | `method_paths`  | `{ method: string, path: string }[]`   | No       | The method paths to retrieve snippets for            | `[{"method": "get", "path": "/pets"}]`                     |
-  | `languages`     | `string[]`                             | No       | The programming languages to retrieve snippets for   | `["python", "javascript"]`                                 |
+**`operation_ids`** <span className="text-xs font-secondary-mono text-brand-warning-500 ml-2">type: string[]</span>
+- **Description**: The operation IDs to retrieve snippets for
+- **Example**: `getPets`
 
-</div>
+**`method_paths`** <span className="text-xs font-secondary-mono text-brand-warning-500 ml-2">type: {`{ method: string, path: string }[]`}</span>
+- **Description**: The method paths to retrieve snippets for
+- **Example**: `[{"method": "get", "path": "/pets"}]`
+
+**`languages`** <span className="text-xs font-secondary-mono text-brand-warning-500 ml-2">type: string[]</span>
+- **Description**: The programming languages to retrieve snippets for
+- **Example**: `["python", "javascript"]`
+
 
 <h4 className="_tracking-tight _text-slate-900 dark:_text-white _mt-10 _text-h5-mobile md:_text-h5">Example Request</h4>
 
