--- a/docs/customize-testing/bootstrapping-test-generation.mdx
+++ b/docs/customize-testing/bootstrapping-test-generation.mdx
@@ -3,8 +3,6 @@ title: "Bootstrapping SDK Tests"
 description: "Learn how to automatically generate contract testing for your API and SDKs."
 ---
 
-import { ScrollyCoding } from "~/components/codehike/Scrollycoding";
-
 # Bootstrapping SDK Tests
 
 Automatically generate tests for your SDKs. Speakeasy can boostrap tests for all your operations including any new operations added in the future.
@@ -31,13 +29,9 @@ Navigate to your SDK repo and run the following command:
 speakeasy configure tests
 ```
 
-<ScrollyCoding>
-
-### !!steps `generation`
-
 Test generation and mock API server generation will be enabled when the following exist in the `generation` section of the configuration.
 
-```yaml ! gen.yaml
+```yaml
 # !focus(2)
 configVersion: 2.0.0
 generation:
@@ -46,21 +40,9 @@ generation:
     generateNewTests: true
 ```
 
----
-
-### !!steps `tests`
-
-Enable automated generation of tests for new operations found.
 When enabling for the first time this will generate tests for all operations in your OpenAPI document.
 Then going forward it will only generate tests for any operations not already found in your `.speakeasy/tests.arazzo.yaml` file.
 
-```yaml ! gen.yaml
-# !focus(4:5)
-```
-
----
-
-</ScrollyCoding>
 
 After enabling test generation, if you wish to disable generation of tests for a specific operation, you can explicitly set `x-speakeasy-test: false`:
 
@@ -86,55 +68,12 @@ Generated test files are written in language-specific locations, relative to the
 | Go | `tests/` |
 | Python | `tests/` |
 | TypeScript | `src/__tests__` |
+| Java | `src/test/java` |
 
 If the mock server is also generated, its output will be in a `mockserver` directory under these locations.
 
-## Running Tests
-
-Run testing, via any of these options, depends on your desired use case:
-
-- Directly via the [`speakeasy test`](/docs/speakeasy-reference/cli/test) CLI command.
-- In [GitHub Actions workflows](/docs/customize-testing/github-actions).
-- In the [`speakeasy run`](/docs/speakeasy-reference/cli/run) CLI command and existing GitHub Actions generation workflow with additional Speakeasy workflow configuration.
-
-For `speakeasy run` support, modify the Speakeasy workflow configuration (`.speakeasy/workflow.yaml`).
-
-<ScrollyCoding>
-
-### !!steps `targets`
-
-Enable running tests during Speakeasy workflows by adding to one or more of the targets in the  `targets` section of the configuration.
-
-```yaml ! workflow.yaml
-# !focus(1)
-targets:
-  example-target:
-    # ... other existing configuration ...
-    testing:
-      enabled: true
-```
-
----
-
-### !!steps `testing`
-
-Enable testing for the target.
-
-```yaml ! workflow.yaml
-# !focus(4:5)
-targets:
-  example-target:
-    # ... other existing configuration ...
-    testing:
-      enabled: true
-```
-
----
-
-</ScrollyCoding>
-
-
 ## Next Steps
 
+- [Running SDK tests](/docs/customize-testing/running-tests)
 - [Customize your SDK tests](/docs/customize-testing/customizing-sdk-tests)
 - [Setup testing in GitHub Actions](/docs/customize-testing/github-actions)
