--- a/docs/customize-testing/github-actions.mdx
+++ b/docs/customize-testing/github-actions.mdx
@@ -16,6 +16,13 @@ Automatically run Speakeasy tests on SDK pull requests or other events in a GitH
   ![A screenshot of a successful test check](../assets/configure-github/testing-run.png)
 </Screenshot>
 
+<Screenshot
+  darkened
+  url="github.com"
+>
+  ![A screenshot of a successful test comment](../assets/configure-github/testing-comment.png)
+</Screenshot>
+
 
 ## Setting up a Github Actions Check
 
