--- a/docs/customize/authentication/configuration.mdx
+++ b/docs/customize/authentication/configuration.mdx
@@ -38,7 +38,7 @@ security: # Here
 
 In the resulting SDK, the user can define the security configuration in the SDK's instantiation. It will then be automatically applied to all subsequent method calls without needing to be passed in as an argument:
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#']}>
+<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
 
 <Tabs.Tab>
 
@@ -179,6 +179,36 @@ catch (Exception ex)
 
 </Tabs.Tab>
 
+
+<Tabs.Tab>
+
+```php
+declare(strict_types=1);
+
+require 'vendor/autoload.php';
+
+use OpenAPI\OpenAPI;
+
+$sdk = OpenAPI\SDK::builder()
+    ->setSecurity(
+        new OpenAPI\Security(
+            apiKey: "<YOUR_API_KEY_HERE>"
+        )
+    )
+    ->build();
+
+try {
+    $response = $sdk->drinks->listDrinks();
+
+    if ($response->drinks !== null) {
+        // handle response
+    }
+} catch (Exception $e) {
+    // handle exception
+}
+```
+
+</Tabs.Tab>
 </Tabs>
 
 ### Per-Operation Security
@@ -216,7 +246,7 @@ security:
 
 In the SDK, the user can pass in a specific security configuration as an argument to the method call:
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#']}>
+<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
 
 <Tabs.Tab>
 
@@ -353,6 +383,35 @@ try
 catch (Exception ex)
 {
    // handle exception
+}
+```
+
+</Tabs.Tab>
+
+<Tabs.Tab>
+
+```php
+declare(strict_types=1);
+
+require 'vendor/autoload.php';
+
+use OpenAPI\OpenAPI;
+
+$sdk = OpenAPI\SDK::builder()->build();
+
+$requestSecurity = new ListDrinksSecurity(
+    apiKey: '<YOUR_API_KEY_HERE>',
+);
+
+try {
+    $response = $sdk->drinks->listDrinks(
+        security: $requestSecurity,
+    );
+
+    // handle response
+
+} catch (Exception $e) {
+    // handle exception
 }
 ```
 
