--- a/docs/customize/authentication/security-callbacks.mdx
+++ b/docs/customize/authentication/security-callbacks.mdx
@@ -32,7 +32,7 @@ components:
 
 The callback function passed when initializing the SDK acts as a _security source_ and is called whenever a request is made, allowing tokens to be refreshed if needed.
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#']}>
+<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
 
 <Tabs.Tab>
 
@@ -138,5 +138,29 @@ var sdk = new SDK(securitySource: tokenSource);
 ```
 
 </Tabs.Tab>
+<Tabs.Tab>
+```php
+use Speakeasy\Speakeasy;
 
+$sdk = Speakeasy\SDK::builder()
+    ->setSecuritySource(
+        function (): Security {
+            //refresh token here
+            var token = "<YOUR_JWT>";
+
+            return new Security(bearerAuth: $token);
+        }
+    )->build();
+
+try {
+    $res = $sdk->drinks->listDrinks();
+
+    if ($res->Drinks != null) {
+        // handle response
+    }
+} catch (Errors\ErrorThrowable $e) {
+    // handle exception
+}
+```
+</Tabs.Tab>
 </Tabs>
