--- a/docs/customize/authentication/simple-schemes.mdx
+++ b/docs/customize/authentication/simple-schemes.mdx
@@ -33,7 +33,7 @@ security:
   - auth: []
 ```
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#']}>
+<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
 
 <Tabs.Tab>
 
@@ -190,6 +190,31 @@ catch (Exception ex)
 
 </Tabs.Tab>
 
+<Tabs.Tab>
+
+```php
+use OpenAPI\OpenAPI;
+use OpenAPI\OpenAPI\Models\Shared;
+
+$sdk = OpenAPI\SDK::builder()->setSecurity(
+    new Shared\Security(
+        password: 'YOUR_PASSWORD',
+        username: 'YOUR_USERNAME',
+  );
+)->build();
+
+try {
+    $res = $sdk->drinks->listDrinks();
+
+    if ($res->Drinks != null) {
+        // handle response
+    }
+} catch (Errors\ErrorThrowable $e) {
+    // handle exception
+}
+```
+
+</Tabs.Tab>
 </Tabs>
 
 ## API key authentication
@@ -222,7 +247,7 @@ security:
   - api_key: []
 ```
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#']}>
+<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
 
 <Tabs.Tab>
 
@@ -363,6 +388,28 @@ catch (Exception ex)
 
 </Tabs.Tab>
 
+<Tabs.Tab>
+```php
+use OpenAPI\OpenAPI;
+use OpenAPI\OpenAPI\Models\Shared;
+
+$sdk = OpenAPI\SDK::builder()->setSecurity(
+    new Shared\Security(
+      apiKey: "<YOUR_API_KEY_HERE>"
+  );
+)->build();
+
+try {
+    $res = $sdk->drinks->listDrinks();
+
+    if ($res->Drinks != null) {
+        // handle response
+    }
+} catch (Errors\ErrorThrowable $e) {
+   // handle exception
+}
+```
+</Tabs.Tab>
 </Tabs>
 
 ## Bearer token authentication
@@ -390,7 +437,7 @@ security:
   - auth: []
 ```
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#']}>
+<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
 
 <Tabs.Tab>
 
@@ -529,5 +576,26 @@ catch (Exception ex)
 ```
 
 </Tabs.Tab>
+<Tabs.Tab>
+```php
+use OpenAPI\OpenAPI;
+use OpenAPI\OpenAPI\Models\Components;
 
+$sdk = OpenAPI\SDK::builder()->setSecurity(
+    new Components\Security(
+        auth: "<YOUR_BEARER_TOKEN_HERE>"
+    );
+)->build();
+
+try {
+    $res = $sdk->drinks->listDrinks();
+
+    if ($res->Drinks != null) {
+        // handle response
+    }
+} catch (Errors\ErrorThrowable $e) {
+    // handle exception
+}
+```
+</Tabs.Tab>
 </Tabs>
