--- a/docs/customize/data-model/types.mdx
+++ b/docs/customize/data-model/types.mdx
@@ -208,15 +208,15 @@ If a type includes an `example` or `examples` field, Speakeasy will use the valu
 
 If more than one example is provided in the `examples` field, a random example will be chosen.
 
-## Including Unused Schema Components
+## Including unused schema components
 
-When working with OpenAPI specifications, there might be cases where you want to include schema components in your generated SDKs even if they aren't directly referenced by any API endpoints. This is particularly useful for:
+When working with OpenAPI documents, there may be cases when you want to include schema components in your generated SDKs, even if they aren't directly referenced by any API endpoints. This is particularly useful for:
 
-- Webhook payload types in OpenAPI versions below 3.1 (before webhooks were officially supported)
-- Types that are used in async operations or events
-- Shared types that might be used in future endpoints
+- Webhook payload types in OpenAPI Specification versions predating the official webhook support introduced in OpenAPI Specification 3.1
+- Types used in asynchronous operations or events
+- Shared types that may be used in future endpoints
 
-### Using x-speakeasy-include
+### Using `x-speakeasy-include`
 
 To include an unused schema component in your generated SDK, add the `x-speakeasy-include: true` extension to the schema component definition:
 
@@ -224,7 +224,7 @@ To include an unused schema component in your generated SDK, add the `x-speakeas
 components:
   schemas:
     WebhookPayload:
-      x-speakeasy-include: true  # This schema will be included in the SDK even if unused
+      x-speakeasy-include: true  # This schema will be included in the SDK even if unused.
       type: object
       properties:
         event_type:
@@ -233,8 +233,8 @@ components:
           type: object
 ```
 
-### Important Notes
+### Important notes
 
-- This extension only works in the main OpenAPI document. It is not supported in referenced documents (e.g., components in separate files).
+- This extension only works in the main OpenAPI document. It is not supported in referenced documents (for example, it won't work for components in separate files).
 - The schema will be included in your SDK regardless of whether it's referenced by any endpoints.
-- This is particularly useful for webhook payloads in OpenAPI versions before 3.1, where webhook support wasn't built into the specification.
+- This is particularly useful for webhook payloads in older versions of the OpenAPI Specification without the webhook support built into OpenAPI Specification 3.1+.
