--- a/docs/customize/deprecations.mdx
+++ b/docs/customize/deprecations.mdx
@@ -43,7 +43,7 @@ paths:
         - beverages
 ```
 
-<Tabs items={['TypeScript','Python','Go','Java', 'C#']}>
+<Tabs items={['TypeScript','Python','Go','Java', 'C#', 'PHP']}>
   <Tabs.Tab>
 
     ```typescript
@@ -108,6 +108,18 @@ paths:
     public async Task<ListDrinksResponse> ListDrinksAsync() {}
     ```
   </Tabs.Tab>
+  <Tabs.Tab>
+    ```php
+    /**
+     * Get a list of drinks, if authenticated this will include stock levels and product codes otherwise it will only include public information.
+     * @param request The request object containing all of the parameters for the API call.
+     * @return The response from the API call.
+     * @throws \OpenAPI\OpenAPI\SDKException
+     * @deprecated  method: This API will be removed in our next release, please refer to the beverages endpoint. Use listBeverages instead.
+     */
+    public function listDrinks(Shared\ListDrinksRequest $request): ListDrinksResponse
+    ```
+  </Tabs.Tab>
 </Tabs>
 
 ## Deprecate Parameters
@@ -153,7 +165,7 @@ paths:
             example: 100
 ```
 
-<Tabs items={['TypeScript','Python','Go','Java', 'C#']}>
+<Tabs items={['TypeScript','Python','Go','Java', 'C#', 'PHP']}>
   <Tabs.Tab>
 ```typescript
 export type ListDrinksRequest = {
@@ -262,6 +274,37 @@ public class ListDrinksRequest
 ```
 
   </Tabs.Tab>
+  <Tabs.Tab>
+    ```php
+class ListDrinksRequest
+{
+
+    /**
+     * Filter by ingredient.
+     * @var ?string $ingredient
+     */
+    #[SpeakeasyMetadata('queryParam:style=form,explode=true,name=ingredient')]
+    private ?string ingredient;
+
+    /**
+     * Filter by name.
+     * @var ?string name
+     * @deprecated field: We no longer support filtering by name.
+     */
+    #[SpeakeasyMetadata('queryParam:style=form,explode=true,name=name')]
+    private ?string name;
+
+    /**
+     * Limit the number of results.
+     * @var ?float limit
+     */
+    #[SpeakeasyMetadata("queryParam:style=form,explode=true,name=limit")]
+    private ?float limit;
+
+}
+```
+
+  </Tabs.Tab>
 </Tabs>
 
 ## Deprecate Properties
@@ -292,7 +335,7 @@ components:
         - productCode
 ```
 
-<Tabs items={['TypeScript','Python','Go','Java', 'C#']}>
+<Tabs items={['TypeScript','Python','Go','Java', 'C#', 'PHP']}>
   <Tabs.Tab>
     ```typescript
     export type Drink = {
@@ -374,6 +417,37 @@ components:
     }
 
 ```
-</Tabs.Tab>
+  </Tabs.Tab>
+  <Tabs.Tab>
+```php
+class Drink
+{
+    /**
+      * @var ?string $name
+      */
+    #[SpeakeasyMetadata("queryParam:name=name")]
+    public ?string $name = null;
+
+    /**
+      * @var string productCode
+      */
+    #[SpeakeasyMetadata("queryParam:name=productCode")]
+    public string $productCode;
+
+    /**
+    * @var ?string sku
+    * @deprecated field: This field will be removed in a future release, please migrate away from it as soon as possible
+    */
+    #[SpeakeasyMetadata("queryParam:name=sku")]
+    public ?string sku = null;
+
+    /**
+      * @var float stock
+      */
+    #[SpeakeasyMetadata("queryParam:name=stock")]
+    public float stock;
+}
+```
+    </Tabs.Tab>
 </Tabs>
 ```
