--- a/docs/customize/methods.mdx
+++ b/docs/customize/methods.mdx
@@ -93,7 +93,7 @@ To ensure the generator always creates a request object for an SDK, set `maxMeth
 
 Here are examples of an SDK with `maxMethodParams` set to `4` and `0`:
 
-<Tabs items={['TypeScript','Python','Go', 'Java', 'C#']}>
+<Tabs items={['TypeScript','Python','Go', 'Java', 'C#', 'PHP']}>
   <Tabs.Tab>
 ```typescript
 // Example of SDK with maxMethodParams set to 4
@@ -351,6 +351,38 @@ var res = await sdk.Drinks.ListDrinksAsync(req);
 // handle response
 
 ````
+  </Tabs.Tab>
+  <Tabs.Tab>
+```php
+// Example of SDK with maxMethodParams set to 4
+declare(strict_types=1);
+
+require 'vendor/autoload.php';
+
+use OpenAPI\OpenAPI;
+
+$sdk = OpenAPI\SDK::builder()->build();
+
+$response = $sdk->drinks->listDrinks("vodka", "martini", 100);
+
+// handle response
+
+// Example of SDK with maxMethodParams set to 0
+declare(strict_types=1);
+
+require 'vendor/autoload.php';
+
+use OpenAPI\OpenAPI;
+
+$sdk = OpenAPI\SDK::builder()->build();
+
+$request = new Shared\ListDrinksRequest(ingredient="vodka", name="martini", limit=100);
+
+$response = $sdk->drinks->listDrinks($request);
+
+// handle response
+
+```
   </Tabs.Tab>
 </Tabs>
 
