--- a/docs/customize/runtime/retries.mdx
+++ b/docs/customize/runtime/retries.mdx
@@ -24,7 +24,7 @@ x-speakeasy-retries:
   backoff:
     initialInterval: 500 # 500 milliseconds
     maxInterval: 60000 # 60 seconds
-    maxElapsedTime: 3600000 # 5 minutes
+    maxElapsedTime: 3600000 # 1 hour
     exponent: 1.5
   statusCodes:
     - 5XX
@@ -75,7 +75,7 @@ paths:
         backoff:
           initialInterval: 500 # 500 milliseconds
           maxInterval: 60000 # 60 seconds
-          maxElapsedTime: 3600000 # 5 minutes
+          maxElapsedTime: 3600000 # 1 hour
           exponent: 1.5
         statusCodes:
           - 408
@@ -126,7 +126,7 @@ To override the retry strategy globally, initialize the SDK object with the appr
 
 In this example, we use the `RetryConfig` object to disable retries globally:
 
-<Tabs items={['TS', 'Python', 'Go', 'Java', 'C#']}>
+<Tabs items={['TS', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
   <Tabs.Tab>
 
 ```typescript
@@ -171,13 +171,21 @@ var sdk = new SDK(
 ```
 
   </Tabs.Tab>
+  <Tabs.Tab>
+
+```php
+$sdk = SDK::builder()
+    ->setRetryConfig(new Retry\RetryConfigNone())->build();
+```
+
+  </Tabs.Tab>
 </Tabs>
 
 ### Request-Level Override
 
 Any endpoints that support retries allow retry configuration to be overridden. In Go, override request-level retry configuration with `operations.WithRetries`. In Python and TypeScript, the optional `retries` is accepted.
 
-<Tabs items={['TS', 'Python', 'Go', 'Java', 'C#']}>
+<Tabs items={['TS', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
 <Tabs.Tab>
 
 ```typescript
@@ -265,6 +273,24 @@ var res = await sdk.FindPetsByStatusAsync(retryConfig: new RetryConfig(
     ),
     retryConnectionErrors: false
 ));
+
+```
+
+  </Tabs.Tab>
+  <Tabs.Tab>
+
+```php
+$sdk = SDK::builder()->build();
+
+$responses = $sdk->findPetsByStatus(
+    options: Utils\Options->builder()->setRetryConfig(
+        new Retry\RetryConfigBackoff(
+            initialInterval: 100,
+            maxInterval:     10000,
+            exponent:        1.1,
+            maxElapsedTime:  60000,
+            retryConnectionErrors: false,
+        ))->build());
 
 ```
 
