--- a/docs/customize/servers.mdx
+++ b/docs/customize/servers.mdx
@@ -93,7 +93,7 @@ Dynamic server selection allows developers to switch between multiple predefined
 
 Specify a server from the predefined list based on its index.
 
-<Tabs items={['Go', 'Python', 'TS', 'C#']}>
+<Tabs items={['Go', 'Python', 'TS', 'C#', 'PHP']}>
   <Tabs.Tab>
 
 ```go
@@ -128,13 +128,20 @@ const sdk = new SDK(serverIndex: 1);
 ```
 
   </Tabs.Tab>
+  <Tabs.Tab>
+
+```php
+$sdk = OpenAPI\SDK::builder()->withServerIndex(1)->build();
+```
+
+  </Tabs.Tab>
 </Tabs>
 
 #### Global URL Override
 
 Set a global server URL at SDK initialization, overriding the base URL.
 
-<Tabs items={['Go', 'Python', 'TS', 'C#']}>
+<Tabs items={['Go', 'Python', 'TS', 'C#', 'PHP']}>
   <Tabs.Tab>
 
 ```go
@@ -188,13 +195,24 @@ const sdk = new SDK(
 ```
 
   </Tabs.Tab>
+  <Tabs.Tab>
+
+```php
+$sdk = OpenAPI\SDK::builder()->
+    // if the x-speakeasy-server-id extension is not used
+    withServerUrl("https://sandbox.example.com")
+    // with x-speakeasy-server-id extension
+    withServer("snadbox")->build();
+```
+
+  </Tabs.Tab>
 </Tabs>
 
 #### Per-Client or Per-Operation Override
 
 Override the server URL for specific instances or API calls.
 
-<Tabs items={['Go', 'Python', 'TS', 'C#']}>
+<Tabs items={['Go', 'Python', 'TS', 'C#', 'PHP']}>
   <Tabs.Tab>
 
 ```go
@@ -235,6 +253,19 @@ const result = await sdk.tag1.listTest1(operationSecurity, page, headerParam1, q
 
 ```csharp
 var res = await sdk.Tag1.ListTest1Async(
+    security: operationSecurity,
+    page: page,
+    headerParam1: headerParam1,
+    queryParam1: queryParam1,
+    serverURL: "https://sandbox.example.com"
+);
+```
+
+  </Tabs.Tab>
+  <Tabs.Tab>
+
+```php
+$response = $sdk.tag1.listTest1(
     security: operationSecurity,
     page: page,
     headerParam1: headerParam1,
