--- a/docs/customize/typescript/react-hooks.mdx
+++ b/docs/customize/typescript/react-hooks.mdx
@@ -25,7 +25,7 @@ typescript:
   # other Typescript configuration options...
 ```
 
-## Customising React hooks
+## Customizing React hooks
 
 The default naming convention for React hooks follows that of standalone
 functions. For example, a standalone function called `productsGetById` will have
