--- a/docs/customize/webhooks.mdx
+++ b/docs/customize/webhooks.mdx
@@ -23,11 +23,14 @@ import { Callout } from '~/components'
 </Callout>
 
 1. You must have a [Speakeasy Business or Enterprise plan](/pricing).
-2. Run the following command to activate webhooks in your SDK generation configuration:
+2. Enable the webhooks add-on to your account under `settings/billing`:
 
-```bash
-speakeasy billing activate -f webhooks
-```
+<Screenshot
+  darkened
+  url="app.speakeasy.com"
+>
+  ![Webhooks add on in the Speakeasy dashboard.](../assets/webhooks-billing.png)
+</Screenshot>
 
 ## Example
 
