--- a/docs/enterprise-support.mdx
+++ b/docs/enterprise-support.mdx
@@ -28,7 +28,7 @@ Speakeasy is committed to providing rapid response and resolution to any issues 
 | Priority level | Definition | SLA | Initiation | Credits |
 | -------- | -------- | -------- | -------- | -------- |
 | P0 | Generated Terraform providers or SDKs do not work (severe functional issues) | First response within 1 hour | E-mail support@speakeasy.com | 5% of the fee applicable in the month per incident of SLA breach |
-| P1 | Generated Terraform providers or SDKs have severe ergonomic or minor functional impact on customers | First response within 3 hours | E-mail support@speakeasy.com | 2% of the fee applicable in the month per incident of SLA breach |
+| P1 | Generated Terraform providers or SDKs exhibit severe ergonomic or functional issues that significantly impact customers, with no available workaround | First response within 3 hours | E-mail support@speakeasy.com | 2% of the fee applicable in the month per incident of SLA breach |
 | P2 | Generated Terraform providers or SDKs have bugs with minor ergonomic impact on customers, feature requests | Prioritize as part of standard Speakeasy development practice, visible in public roadmap | E-mail support@speakeasy.com | n/a |
 
 
