--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -5,15 +5,63 @@ description: "Read Speakeasy documentation for more information on our features 
 
 import { SearchBarDocs } from "~/lib/inkeep/base";
 import { Banner, GenerateSDK, GenerateTerraformProviders, TestApis, GovernApis, Support } from "~/features/docs/home";
+import { IconGrid } from "~/features/shared/recipes";
+import { ProductCards } from "~/features/docs/home/recipes";
+import { DocsOffering } from "~/features/docs/home/recipes";
+import { SupportedLanguagesData } from "~/data/shared/supportedLanguages";
+import { SignUpButton } from "~/features/shared/recipes";
+import { OpenAPIIcon, CalendarIcon, OpenBookIcon, LogsIcon } from "~/components/jsx-icons";
 
 <Banner />
 
-<SearchBarDocs />
+## Products
+<div className="py-8">
+    <ProductCards variant="four" />
+</div>
 
-<GenerateSDK />
-<GenerateTerraformProviders />
-<TestApis />
-<GovernApis />
+---
+
+## Idiomatic SDKs
+<IconGrid {...SupportedLanguagesData} />
+
+## SDK-enhanced documentation
+
+<DocsOffering />
+
+---
+
+## Resources
+
+<div className="py-8">
+    <ProductCards
+        variant="four"
+        products={[
+            {
+                icon: <OpenAPIIcon />,
+                title: "OpenAPI Hub",
+                description: "All your OpenAPI questions — answered",
+                href: "/openapi"
+            },
+            {
+                icon: <OpenBookIcon />,
+                title: "API Design Guide",
+                description: "Best practices for designing RESTful APIs",
+                href: "/api-design"
+            },
+            {
+                icon: <LogsIcon />,
+                title: "Changelog",
+                description: "Stay up to date with the latest features and improvements",
+                href: "/changelog"
+            },
+            {
+                icon: <CalendarIcon />,
+                title: "Product Roadmap",
+                description: "See what's coming next for Speakeasy",
+                href: "https://speakeasy.productlane.com/roadmap"
+            }
+        ]}
+    />
+</div>
 
 <Support />
-
