--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -3,61 +3,87 @@ title: Introduction
 description: "Introduction to Speakeasy."
 ---
 
-import cli_quickstart from './assets/cli-quickstart.mp4';
+import { SignUpButton } from "~/features/shared/recipes";
+import { CodeWithTabs } from "~/components/codehike/CodeTabs";
+import ref_architecture from './assets/ref-architecture.png';
+import { ProductCards } from "~/features/docs/home/recipes";
 
 import Image from "next/image";
 import vsCodeImageUrl from "./assets/vscode.svg"
 
 # Introduction to Speakeasy
 
-Use Speakeasy to service your API community with a best-in-class developer experience, without building and maintaining SDKs yourself.
+Speakeasy is a platform that provides API developers with tools, workflows, and infrastructure to create APIs optimized for both developers and LLMs.
 
-## Features
+With Speakeasy, you can create SDKs, agent tools, API documentation, and more.
 
-* Generate production-ready SDKs in over eight programming languages. 
+## Why APIs matter
 
-* Customize and brand SDKs to suit your needs.
+APIs are a powerful force for innovation. One team solves a problem, exposes an API, and every engineer (or AI agent) benefits from their work. That means more time spent tackling new problems, and less time reinventing the wheel.
 
-* Generate Terraform providers directly from your OpenAPI document.
+The problem is that most APIs are bad.
 
-* Use powerful primitives like sources and targets to design a code generation pipeline for local development and CI/CD.
+The tools and practices for building quality, reliable APIs hasn't kept pace with the central role APIs play in modern software development.
 
-* Automate your API supply chain to detect breaking changes, versioning, and release management to package managers.
+That's the problem Speakeasy exists to solve.
 
-* Build maintenance workflows on your OpenAPI document using [overlays](/docs/prep-openapi/overlays/create-overlays).
+## Speakeasy Products
 
-* Use a schema registry to build API provenance, enforce standards, and simplify governance.
+<div className="py-8">
+    <div className="max-w-7xl mx-auto">
+        <ProductCards />
+    </div>
+</div>
 
-## Getting started
+## Before you Begin
 
-Start locally and manage multiple APIs through our platform. It's as easy as following these steps: 
+### Sign up
+Sign up for a free Speakeasy account at [https://app.speakeasy.com](https://app.speakeasy.com).
 
-1. Create an account on [our platform](https://app.speakeasy.com).
-2. Install the Speakeasy CLI using Homebrew or curl:
-```bash
-brew install speakeasy-api/tap/speakeasy
+<SignUpButton className="w-fit my-8"/>
+
+New accounts start with a 14 day free trial of Speakeasy's business tier, to enable users to try out every SDK generation feature. At the end of the trial, accounts will revert to the free tier. No credit card is required.
+
+Free accounts can continue to generate one SDK with up to 50 API methods free of charge.
+
+### Install the Speakeasy CLI
+Install the Speakeasy CLI using one of the following methods:
+
+<CodeWithTabs>
+
+```bash !!tabs Homebrew
+# Homebrew (macOS)
+brew install speakeasy-api/homebrew-tap/speakeasy
 ```
-or
-```bash
+
+```bash !!tabs Script
+# Script Installation (macOS and Linux)
 curl -fsSL https://go.speakeasy.com/cli-install.sh | sh
 ```
-3. Run `speakeasy quickstart` in any code directory or follow the instructions on the dashboard.
 
-And you're on your way! See our [complete getting started guide](/docs/create-client-sdks) for more details.
-<br></br>
+```bash !!tabs Winget
+# Windows Installation
+# Using winget:
+winget install speakeasy
+```
 
-<video controls={false} loop={true} autoPlay={true} muted={true} width="100%" >
-   <source src={cli_quickstart} type="video/mp4" />
-</video>
+```bash !!tabs Choclatey
+# Using Chocolatey:
+choco install speakeasy
+```
+</CodeWithTabs>
 
-## How does it work?
 
-Speakeasy understands your API specification and creates a flexible representation to generate SDKs, Terraform providers, and more.
+## Workflow
 
-Everything can be run locally through the CLI. The Speakeasy platform tracks the different artifacts and versions you create, allowing you to manage them in one place. For more advanced use cases, the CLI can be tooled directly into your CI/CD pipelines. 
+<div align="center">
+    ![ref_architecture](./assets/ref-architecture.png)
+</div>
 
-If you have questions, join our [community Slack](https://join.slack.com/t/speakeasy-dev/shared\_invite/zt-1df0lalk5-HCAlpcQiqPw8vGukQWhexw) or [book a time](https://calendly.com/d/5dm-wvm-2mx/chat-with-speakeasy-team) to speak with one of us.
+Our platform is built to be OpenAPI-native, no proprietary DSLs to lock you in. From your OpenAPI specs, we enable you to generate SDKs, API documentation, agent tools & more.
 
-## Work with Speakeasy in your IDE
+To make it seamless, we provide native CI/CD workflows that automate updates, from backend changes through to SDK release management.
 
-<Image src={vsCodeImageUrl} width="20" height="20" style={{display: "inline-block"}} alt="VS Code icon" /> The [Speakeasy VS Code extension](https://marketplace.visualstudio.com/items?itemName=Speakeasy.speakeasy-vscode-extension) provides syntax highlighting, autocompletion for supported file types, and linting for OpenAPI documents.
+## Support
+
+We operate as an extension of our customers API platform teams. We have dedicated support to help with sensitive releases and provide feedback on API design & best practices.
