--- a/docs/languages/php/methodology-php.mdx
+++ b/docs/languages/php/methodology-php.mdx
@@ -13,10 +13,8 @@ Some core features of the SDK are:
 
 - Class-based objects using reflection and property attributes to aid serialization.
 - A `Utils` package for common operations, simplifying generated code and making it easier to debug.
-- A convenient factory pattern manages the SDK configuration.
-- Support for OAuth flows and other standard security mechanisms.
-
-While this article discusses the main features of the PHP SDK creator, for code examples with a full OpenAPI document, please see the [Speakeasy comparison article with OpenAPI Generator](./oss-comparison-php).
+- A convenient builder pattern manages the SDK configuration, and request level options.
+- Support for some OAuth flows and other standard security mechanisms.
 
 ## New PHP features
 
@@ -92,7 +90,7 @@ Files in the Speakeasy-created PHP SDK include the line `declare(strict_types=1)
 
 ### Type checking and linting
 
-Speakeasy uses a combination of [PHPStan](https://phpstan.org), [Laravel Pint](https://laravel.com/docs/11.x/pint), and [Rector](https://github.com/rectorphp/rector) for linting, performing quality control, and statically analyzing the SDK.
+Speakeasy uses a combination of [PHPStan](https://phpstan.org) and [Laravel Pint](https://laravel.com/docs/11.x/pint) for linting, performing quality control, and statically analyzing the SDK.
 
 ### Quality and security
 
@@ -139,7 +137,7 @@ Where no native data types are available, the Speakeasy PHP SDK uses libraries:
 - `Brick\Math\BigInteger`
 - `Brick\Math\BigDecimal`
 
-The generated classes are standard PHP classes with public properties. These classes use attributes and reflection to help guide serialization.
+The generated classes are standard PHP classes with public properties. These classes use attributes, docstrings, annotations and reflection to help guide serialization.
 
 ## Parameters
 
@@ -149,7 +147,7 @@ The maximum number of parameters to be placed in the method signature is set in 
 
 ## Errors
 
-The Speakeasy PHP SDK returns errors by throwing the appropriate `error` class as part of the SDK call. You can then wrap your requests in a `try` block to handle the error in the response.
+The Speakeasy PHP SDK throws exceptions using the appropriate `error` class as defined in the sdk specification. You can then wrap your requests in a `try` block to handle the error in the response.
 
 ## User agent strings
 
@@ -313,13 +311,3 @@ The `age` property will be typed as a union in PHP:
  * @param  int|string|null  $age
  */
 ```
-
-## Unsupported features
-
-Speakeasy does not support the following OpenAPI features in PHP:
-
-- XML requests and responses
-- OAuth 2.0 flows other than implicit flow
-- SDK hooks
-
-As PHP SDK creation is still an beta release, not all [extension attributes](/docs/customize-sdks) (`x-speakeasy`) work. For example, [open enums](/docs/customize-sdks/enums#open-vs-closed-enums) and [automatic retries](/docs/customize-sdks/retries) are not supported.
