--- a/docs/languages/typescript/methodology-ts.mdx
+++ b/docs/languages/typescript/methodology-ts.mdx
@@ -67,6 +67,10 @@ The SDK targets ES2018, ensuring compatibility with a wide range of JavaScript r
 - [Web Streams API][web-streams] and in particular `ReadableStream`
 - [Async iterables][async-iter] using `Symbol.asyncIterator`
 
+<Callout title="Note" variant="info">
+  We used data from `caniuse` and `mdn` to determine our support policy and when we adopt a javascript feature. Typically we adopt features that have been out for > 3 years with reasonable support.
+</Callout>
+
 [web-fetch]: https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API
 [web-streams]: https://developer.mozilla.org/en-US/docs/Web/API/Streams_API
 [async-iter]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols#the_async_iterator_and_async_iterable_protocols
