--- a/docs/manage/migrate/poetry-2-update.mdx
+++ b/docs/manage/migrate/poetry-2-update.mdx
@@ -3,33 +3,34 @@ title: "Poetry 2.0 and Python 3.9 Updates"
 description: "Upgrading to Poetry 2.0 and Python 3.9"
 ---
 
-# Poetry 2.0 and Python 3.9 Updates
+# Poetry 2.0 and Python 3.9 updates
 
 This guide covers important updates to the Python SDK generation process related to Poetry 2.0 and Python 3.9 requirements.
 
-## Steps Overview
+## Changes overview
 
-Two significant changes are being implemented in the Python SDK generation process:
+To evolve with the Python ecosystem and maintain compatibility with current tooling, two significant changes are being implemented in the Python SDK generation process:
 
-1. The minimum Python version for generated Python SDKs is changing from 3.8 to 3.9
-2. Poetry packaging tool is being updated to version 2.0.0
+1. The minimum Python version for generated Python SDKs is changing from 3.8 to 3.9.
+2. Poetry packaging tool is being updated to version 2.0.0.
 
-These changes are necessary to evolve with the Python ecosystem and maintain compatibility with current tooling.
 
-## Python 3.9 Requirement
+
+## Python 3.9 requirement
 
 Python 3.8 reached end-of-life (EOL) status in October 2024 and is no longer supported by the Python language maintainers for security and bug fixes. The last bug fix update was in May 2021, and the last security update was in September 2024.
 
-Key type safety tools used by our generation process have begun removing Python 3.8 support:
+The key type safety tools used in the Speakeasy generation process have begun removing Python 3.8 support:
+
 - Poetry ([change](https://github.com/python-poetry/poetry/pull/9692))
-- MyPy ([change](https://github.com/python/mypy/pull/17492))
+- Mypy ([change](https://github.com/python/mypy/pull/17492))
 - Pylint ([change](https://github.com/pylint-dev/pylint/pull/9774))
 
-## Poetry 2.0 Update
+## Poetry 2.0 update
 
-Poetry has released a major version update (2.0.0) that includes breaking changes between 1.x and 2.x for CLI commands used in the generation process. By default, following the documented installation options, Poetry is installed at the latest version.
+The Poetry version 2.0.0 release introduces breaking changes to CLI commands used in the generation process, affecting compatibility with version 1.x. By default, Poetry is installed at the latest version when following the documented installation options.
 
-## Local Development Updates
+## Local development updates
 
 API producers running generation locally will need to update Poetry to the new major version. The update process depends on your installation method:
 
@@ -49,9 +50,9 @@ ERROR	dependency version not met -- poetry - version 1.8.5 is less than required
 FATAL	Failed to generate SDK to XXX
 ```
 
-## GitHub Actions Configuration
+## GitHub Actions configuration
 
-For API producers using GitHub Actions (via `speakeasy-api/sdk-generation-action@v15`) with the latest Speakeasy version, Poetry will be automatically updated. No changes are needed for the most common usage.
+API producers using GitHub Actions (`speakeasy-api/sdk-generation-action@v15`) with the latest Speakeasy version will have Poetry automatically updated. No changes are needed for the most common usage.
 
 If the Speakeasy version is pinned to an older version, add the `poetry_version` input to the repository's workflow configuration to pin Poetry to the older major version:
 
@@ -62,8 +63,8 @@ with:
   poetry_version: "1.8.5"
 ```
 
-## Version Update Considerations
+## Version update considerations
 
-The generator will suggest these Python changes as a minor version update to the generated SDK, following typical industry practice. However, API producers may want to consider releasing the SDK as a major version update if they know their API consumers are particularly prone to be running on Python 3.8, which was previously common for some data management software as a service platforms.
+Consistent with industry practice, the Speakeasy generator will suggest a minor version update for the generated SDK to reflect these Python changes. However, consider releasing the SDK as a major version update if you know your API consumers are likely to be using Python 3.8, which was previously common for some data management SaaS platforms.
 
 If you have any questions please reach out on [Slack](https://join.slack.com/t/speakeasy-dev/shared_invite/zt-1cwb3flxz-lS5SyZxAsF_3NOq5xc8Cjw).
