--- a/docs/manage/migrate/workflow-migration.mdx
+++ b/docs/manage/migrate/workflow-migration.mdx
@@ -1,35 +1,35 @@
 ---
-title: "Migrate to Speakeasy Workflows"
-description: "Migrate to Speakeasy Workflows."
+title: "Migrate to Speakeasy workflows"
+description: "Migrate to Speakeasy workflows."
 ---
 
-# Migrate to Speakeasy Workflows
+# Migrate to Speakeasy workflows
 
-The [`workflow.yaml` file](/docs/speakeasy-reference/workflow-file) allows you to define all the relevant pieces of your SDK generation as consistent config in a single place. 
+The [`workflow.yaml` file](/docs/speakeasy-reference/workflow-file) allows you to define all the relevant pieces of your SDK generation as consistent configs in a single place.
 This new generation system is entirely portable. Generate your SDKs locally, from GitHub, or from any CI system with absolute consistency.
 
-## Who Needs to Migrate?
+## Who needs to migrate?
 
-If you have been using Speakeasy since before March 2024, follow the steps below to migrate to workflows. Customers who started with Speakeasy in March 2024 or later are likely already using Speakeasy workflows.
+Customers who started with Speakeasy in March 2024 or later are likely already using Speakeasy workflows. You can verify this by checking the folders in your generated SDK. If your SDK contains a `.speakeasy` folder, you are already using workflows.
 
-If a `.speakeasy` folder is present in your generated SDK, you are already using workflows. 
+If you started using Speakeasy before March 2024, follow the steps below to migrate to workflows.
 
+## Migration steps
 
-## Migration Steps
-
-If you have an existing Speakeasy SDK in GitHub, we've set up an easy migration tool for you. Navigate to the root of your repo and run the following command:
+If you have an existing Speakeasy SDK in GitHub, we've set up an easy migration tool for you to use. Navigate to the root of your repo and run the following command:
 
 ```bash
 speakeasy migrate
 ```
 
 You should see the following changes as a result:
+
 - `.speakeasy/workflow.yaml` [NEW]
 - `.github/workflows/sdk_generation_action.yaml` [UPDATED]
 
 Push these changes up and you are ready to go!
 
-The produced files should look something like the following.
+The produced files should look something like the following:
 
 ```yaml .github/workflows/sdk_generation_action.yaml
 name: Generate
@@ -71,15 +71,15 @@ targets:
         source: openapi
 ```
 
-You can now generate your SDK locally using `speakeasy run` while GitHub Actions automated generations will continue working as previously.
+You can now generate your SDK locally using `speakeasy run`, while GitHub Actions automated generations will continue working as before.
 
-If you have any custom code in your current GitHub action workflow, it should automatically be moved over by the migration script. 
+If you have any custom code in your current GitHub Actions workflow, it should automatically be moved over by the migration script.
 
 If you have any issues migrating to workflows, reach out to the Speakeasy team on Slack and we will help you resolve it quickly.
 
-## Creating a New SDK Repo
+## Creating a new SDK repo
 
-If you prefer to migrate by creating a new SDK repo, we have an easy-to-use command to set up an SDK for your preferred spec and language.
+If you prefer to migrate by creating a new SDK repo, we have an easy-to-use command for setting up an SDK for your preferred specification and language.
 
 Create a new repo and run the following commands from the root directory:
 
@@ -88,4 +88,4 @@ speakeasy quickstart
 speakeasy configure github
 ```
 
-Once your repo is created, copy the `gen.yaml` from your old SDK into `.speakeasy/gen.yaml` in your new SDK repo. You're ready to generate!
+Once your repo has been created, copy the `gen.yaml` from your old SDK into `.speakeasy/gen.yaml` in your new SDK repo. You're ready to generate!
