--- a/docs/prep-openapi/linting.mdx
+++ b/docs/prep-openapi/linting.mdx
@@ -1,6 +1,6 @@
 ---
 title: "OpenAPI document linting"
-description: "Learn how to use Speakeasy to validate OpenAPI syntax, operations, schemas, and extensions."
+description: "Learn how to validate OpenAPI syntax, operations, schemas, and extensions with Speakeasy."
 sidebar_title: "Overview"
 ---
 
@@ -24,21 +24,21 @@ import vsCodeImageUrl from "../assets/vscode.svg";
   file, as well as linting for OpenAPI documents and other supported file types.
 </Callout>
 
-In addition to running validation, you can use Speakeasy to lint your OpenAPI documents to ensure they are stylistically valid. By default, the linter runs using a [recommended set of rules](/docs/linting/linting#speakeasy-recommended), which you can optionally extend with the [available ruleset](/docs/linting/linting#available-rulesets). You can also write custom rules using the Spectral format.
+In addition to running validation, Speakeasy lints OpenAPI documents to ensure stylistic validity. By default, the linter runs using a [recommended set of rules](/docs/linting/linting#speakeasy-recommended), which can be extended with the [available ruleset](/docs/linting/linting#available-rulesets). Custom rules can also be written using the Spectral format.
 
-With the Speakeasy Linter, you can:
+The Speakeasy Linter offers:
 
-- Lint and validate OpenAPI 3.x documents.
-- Choose from 70+ rules.
-- Get started quickly with five out-the-box rulesets, including `speakeasy-recommended`, `speakeasy-generation`, `speakeasy-openapi`, `vacuum`, and `owasp`.
-- Reconfigure the Speakeasy default rules and rulesets.
-- Configure custom rulesets.
-- Define new rules using the Spectral rule format.
-- Provide custom functions written in Go and JavaScript for custom rules.
+- Linting and validation of OpenAPI 3.x documents
+- Access to 70+ rules
+- Quick start with five out-the-box rulesets: `speakeasy-recommended`, `speakeasy-generation`, `speakeasy-openapi`, `vacuum`, and `owasp`
+- Reconfiguration of Speakeasy default rules and rulesets
+- Configuration of custom rulesets
+- Definition of new rules using the Spectral rule format
+- Support for custom functions written in Go and JavaScript
 
 ## Usage
 
-There are three options for running linting:
+Three options are available for running linting:
 
 1. Run manually via the Speakeasy CLI:
 
@@ -46,32 +46,32 @@ There are three options for running linting:
 speakeasy lint openapi -s openapi.yaml
 ```
 
-2. Integrate into your Speakeasy workflow:
+2. Integrate into a Speakeasy workflow:
 
 ```yaml
 workflowVersion: "1.0.0"
 speakeasyVersion: latest
 sources:
-  my-source:
+  api-source:
     inputs:
       - location: ./openapi.yaml
 ```
 
-Running `speakeasy run` will lint your document as part of the workflow and generate an HTML report that you can access from a link in the command output.
+Running `speakeasy run` lints the document as part of the workflow and generates an HTML report accessible from a link in the command output.
 
-3. Use the <Image src={vsCodeImageUrl} width="20" height="20" style={{display: "inline-block"}} alt='Visual Studio Code logo' /> [Speakeasy VS Code extension](https://marketplace.visualstudio.com/items?itemName=Speakeasy.speakeasy-vscode-extension) in your IDE.
+3. Use the <Image src={vsCodeImageUrl} width="20" height="20" style={{display: "inline-block"}} alt='Visual Studio Code logo' /> [Speakeasy VS Code extension](https://marketplace.visualstudio.com/items?itemName=Speakeasy.speakeasy-vscode-extension) in the IDE.
 
-By default, these options use the `speakeasy-recommended` ruleset to ensure your OpenAPI document meets the Speakeasy quality bar.
+By default, these options use the `speakeasy-recommended` ruleset to ensure OpenAPI documents meet the Speakeasy quality bar.
 
 ## Configuration
 
-The linting of an OpenAPI spec is fully configurable. You can create a custom ruleset by selecting from our predefined sets or writing your own rules. These custom linting rules can be used throughout your workflow.
+OpenAPI spec linting is fully configurable. Create custom rulesets by selecting from predefined sets or writing new rules. These custom linting rules work throughout the workflow.
 
-However, immediately before SDK generation, the `speakeasy-generation` ruleset is always used to ensure compatibility with the code generator.
+Immediately before SDK generation, the `speakeasy-generation` ruleset is always applied to ensure compatibility with the code generator.
 
-Configure linting in a `lint.yaml` document in the `.speakeasy` folder. The `.speakeasy` folder can be located in the same directory as the OpenAPI document, the working directory you run the `speakeasy lint` or `speakeasy run` commands from, or the home directory.
+Configure linting in a `lint.yaml` document in the `.speakeasy` folder. The `.speakeasy` folder can be located in the same directory as the OpenAPI document, the working directory for running the `speakeasy lint` or `speakeasy run` commands, or the home directory.
 
-Here is an example of linting configuration in a `lint.yaml` file:
+Example linting configuration in a `lint.yaml` file:
 
 ```yaml
 lintVersion: 1.0.0
@@ -80,12 +80,12 @@ rulesets:
   barRuleset:
     rulesets:
       - speakeasy-generation # Use the speakeasy-generation ruleset as a base
-      - ourRuleset
+      - customRuleset
     rules:
       validate-enums: {
-          severity: warn, # drop the severity of the `validate-enums` rule as I don't want this to block the pipeline
+          severity: warn, # drop the severity of the `validate-enums` rule to avoid blocking the pipeline
         }
-  ourRuleset:
+  customRuleset:
     rules:
       paths-kebab-case: # A custom rule following the spectral format for a rule
         description: Paths should be kebab-case.
@@ -108,19 +108,19 @@ rulesets:
             function: truthy
 ```
 
-A `lint.yaml` document defines a collection of rulesets that can be chained together or used independently. You can define any built-in Speakeasy rulesets, define new rules, modify existing rules, or remix the available rules to suit your needs.
+A `lint.yaml` document defines a collection of rulesets that can be chained together or used independently. Define any built-in Speakeasy rulesets, create new rules, modify existing rules, or remix available rules to suit specific needs.
 
-Rulesets can be used in various ways:
+Use rulesets in these ways:
 
-1. Set the `defaultRuleset` in your `lint.yaml` to the ruleset you want to use by default. The default ruleset will be used if a ruleset is not specified using the `lint` command or `workflow.yaml` file.
+1. Set the `defaultRuleset` in the `lint.yaml` to use by default. This ruleset applies when no ruleset is specified using the `lint` command or `workflow.yaml` file.
 2. Pass a ruleset name to the `lint` command with the `-r` argument, for example, `speakeasy lint openapi -r barRuleset -s openapi.yaml`.
-3. Define the ruleset to use for a particular source in your `workflow.yaml` file.
+3. Define the ruleset for a particular source in the `workflow.yaml` file.
 
 ```yaml
 workflowVersion: "1.0.0"
 speakeasyVersion: latest
 sources:
-  my-source:
+  api-source:
     inputs:
       - location: ./openapi.yaml
     ruleset: barRuleset
@@ -128,13 +128,17 @@ sources:
 
 ## Custom rules
 
-The easiest way to create a custom rule is to use the [Spectral rule format](https://docs.stoplight.io/docs/spectral/d3482ff0ccae9-rules), which is an object that defines the rule and its properties.
+Create custom rules most easily using the [Spectral rule format](https://docs.stoplight.io/docs/spectral/d3482ff0ccae9-rules), which defines the rule and its properties as an object.
 
-Use this format to override built-in rules or define new rules.
+This format works for overriding built-in rules or defining new rules.
 
-For rules that are more complex than matching a pattern or checking that a field exists, you can define a custom Go or JavaScript function in your rule.
+For more complex rules beyond pattern matching or field existence checking, define custom Go or JavaScript functions.
 
-Speakeasy linting is built on top of [vacuum](https://github.com/daveshanley/vacuum) and allows you to use custom Go or JavaScript functions in rules. The vacuum documentation provides instructions for writing custom functions in [JavaScript](https://quobix.com/vacuum/api/custom-javascript-functions/) and [Go](https://quobix.com/vacuum/api/custom-functions/).
+### Custom Go/JavaScript functions
+
+Speakeasy linting builds on [vacuum](https://github.com/daveshanley/vacuum) and supports custom Go or JavaScript functions in rules. The vacuum documentation explains writing custom functions in [JavaScript](https://quobix.com/vacuum/api/custom-javascript-functions/) and [Go](https://quobix.com/vacuum/api/custom-functions/).
+
+After creating custom functions, place them in a directory named `functions` in the `.speakeasy` folder (e.g. `.speakeasy/functions/foo.js`).
 
 ## Available rules
 
@@ -167,7 +171,7 @@ The rules available to the Speakeasy Linter are listed below and can be used in 
 | owasp-protection-global-unsafe         | error            | API should be protected by a `security` rule at either global or operation level.                                                                                        |
 | oas3-schema                            | error            | OpenAPI 3.0 specification is invalid.                                                                                                                                    |
 | path-params                            | error            | Path parameters must be defined and valid.                                                                                                                               |
-| owasp-string-limit                     | error            | String size should be limited to mitigate resource exhaustion attacks.                                                                                                   |
+| owasp-string-limit                     | error            | String size should be limited to mitigate resource exhaustion attacks.                                                                                                  |
 | owasp-no-http-basic                    | error            | Security scheme uses HTTP Basic. Use a more secure authentication method like OAuth 2.0.                                                                                 |
 | oas2-host-not-example                  | warn             | Host URL should not point at example.com.                                                                                                                                |
 | validate-enums                         | error            | Validate enums are valid for type generation.                                                                                                                            |
@@ -186,13 +190,13 @@ The rules available to the Speakeasy Linter are listed below and can be used in 
 | operation-operationId                  | error            | Every operation must contain an `operationId`.                                                                                                                           |
 | operation-parameters                   | error            | Operation parameters are unique and non-repeating.                                                                                                                       |
 | validate-requests                      | error            | Validate request content types are valid MIME types.                                                                                                                     |
-| validate-document                      | error            | Document must have a `paths` or `webhooks` object.                                                                                                                       |
+| validate-document                      | error            | Document must have a `paths` or `webhooks` object.                                                                                                                      |
 | no-ambiguous-paths                     | error            | Paths need to resolve unambiguously from one another.                                                                                                                    |
 | oas3-api-servers                       | warn             | Check for valid API servers definition.                                                                                                                                  |
 | info-contact                           | warn             | Info section is missing contact details.                                                                                                                                 |
 | paths-kebab-case                       | warn             | Path segments must only use kebab case (no underscores or uppercase).                                                                                                    |
 | openapi-tags                           | warn             | Top-level spec `tags` must not be empty and must be an array.                                                                                                            |
-| owasp-array-limit                      | error            | Array size should be limited to mitigate resource exhaustion attacks.                                                                                                    |
+| owasp-array-limit                      | error            | Array size should be limited to mitigate resource exhaustion attacks.                                                                                                   |
 | oas-schema-check                       | error            | All document schemas must have a valid type defined.                                                                                                                     |
 | license-url                            | info             | License should contain a URL.                                                                                                                                            |
 | oas2-schema                            | error            | OpenAPI 2.0 specification is invalid.                                                                                                                                    |
@@ -222,8 +226,8 @@ The rules available to the Speakeasy Linter are listed below and can be used in 
 | path-declarations-must-exist           | error            | Path parameter declarations must not be empty, for example, `/api/{}` is invalid.                                                                                        |
 | owasp-constrained-additionalProperties | warn             | By default, JSON Schema allows additional properties, which can potentially lead to mass assignment issues.                                                              |
 | operation-description                  | warn             | Operation description checks.                                                                                                                                            |
-| owasp-integer-format                   | error            | Integers should be limited to mitigate resource exhaustion attacks.                                                                                                      |
-| owasp-integer-limit                    | error            | Integers should be limited with `min` or `max` values to mitigate resource exhaustion attacks.                                                                           |
+| owasp-integer-format                   | error            | Integers should be limited to mitigate resource exhaustion attacks.                                                                                                     |
+| owasp-integer-limit                    | error            | Integers should be limited with `min` or `max` values to mitigate resource exhaustion attacks.                                                                          |
 | validate-deprecation                   | error            | Ensure correct usage of `x-speakeasy-deprecation-replacement` and `x-speakeasy-deprecation-message` extensions.                                                          |
 | validate-json-schema                   | error            | Validate OpenAPI document against JSON Schema.                                                                                                                           |
 | validate-content-type                  | error            | Validate content type schemas.                                                                                                                                           |
@@ -245,11 +249,11 @@ The rules available to the Speakeasy Linter are listed below and can be used in 
 
 ## Available rulesets
 
-The rulesets available to the Speakeasy Linter are listed below and can be chained in your custom rules. These rulesets will be used by default when custom linting configuration is not provided.
+The rulesets available to the Speakeasy Linter are listed below and can be chained in custom rules. These rulesets will be used by default when custom linting configuration is not provided.
 
 ### speakeasy-recommended
 
-The Speakeasy Linter uses the `speakeasy-recommended` ruleset by default when no custom ruleset is provided. This ruleset is recommended to ensure your OpenAPI document meets the Speakeasy quality bar.
+The Speakeasy Linter uses the `speakeasy-recommended` ruleset by default when no custom ruleset is provided. This ruleset is recommended to ensure OpenAPI documents meet the Speakeasy quality bar.
 
 | Rule ID                         |
 | ------------------------------- |
@@ -329,7 +333,7 @@ Use the `speakeasy-generation` ruleset as appropriate to configure the linter to
 
 ### speakeasy-openapi
 
-The `speakeasy-openapi` ruleset is a minimal set of rules recommended to ensure your OpenAPI document is generally valid and ready to be used by most of the OpenAPI ecosystem.
+The `speakeasy-openapi` ruleset is a minimal set of rules recommended to ensure OpenAPI documents are generally valid and ready to be used by most of the OpenAPI ecosystem.
 
 | Rule ID                         |
 | ------------------------------- |
@@ -366,7 +370,7 @@ The `speakeasy-openapi` ruleset is a minimal set of rules recommended to ensure 
 
 ### vacuum
 
-The `vacuum` ruleset is provided by the [vacuum project](https://github.com/daveshanley/vacuum), which the Speakeasy Linter is built on top of. This set of rules is recommended to ensure your OpenAPI document meets the vacuum quality bar.
+The `vacuum` ruleset is provided by the [vacuum project](https://github.com/daveshanley/vacuum), which the Speakeasy Linter is built on top of. This set of rules is recommended to ensure OpenAPI documents meet the vacuum quality bar.
 
 | Rule ID                               |
 | ------------------------------------- |
@@ -428,7 +432,7 @@ The `vacuum` ruleset is provided by the [vacuum project](https://github.com/dave
 
 ### owasp
 
-The `owasp` ruleset is recommended to ensure your OpenAPI document meets the [Open Worldwide Application Security Project (OWASP)](https://owasp.org/www-project-api-security/) quality bar.
+The `owasp` ruleset is recommended to ensure OpenAPI documents meet the [Open Worldwide Application Security Project (OWASP)](https://owasp.org/www-project-api-security/) quality bar.
 
 | Rule ID                                |
 | -------------------------------------- |
