--- a/docs/prep-openapi/overlays/apply-overlays.mdx
+++ b/docs/prep-openapi/overlays/apply-overlays.mdx
@@ -1,19 +1,20 @@
 ---
 slug: "/apply-overlays"
 sidebar_label: Apply Overlays
-description: "Overlays are patch files which implement changes to your OpenAPI / Swagger spec. With overlays you don't need to update the upstream OpenAPI spec to implement your changes. We explain how they work and show you how to use overlays."
+description: "Overlays are patch files that implement changes to an OpenAPI document without modifying the upstream source. This guide explains how overlays work and how to apply them."
 ---
 
 
-# Apply an Overlay
+# Apply an overlay
 
-Speakeasy provides two options for applying overlays.
-- Option One: add the overlay directly to the Speakeasy workflow file, ensuring it is automatically applied with every generation.
-- Option Two: output a new OpenAPI document with the overlay applied, creating an updated source of truth for the OpenAPI specification.
+Speakeasy provides two options for applying overlays:
 
-## Option One: Add an Overlay to a Speakeasy Workflow
+- Option One: Add the overlay directly to the Speakeasy workflow file, ensuring automatic application with every generation
+- Option Two: Output a new OpenAPI document with the overlay applied, creating an updated reference document
 
-The Speakeasy workflow supports using an overlay file to modify a source OpenAPI document. For more information on how sources work, see [here](/docs/core-concepts#sources).
+## Option One: Add an overlay to a Speakeasy workflow
+
+The Speakeasy workflow supports using an overlay file to modify a source OpenAPI document. For more information on sources, refer to the documentation on [core Speakeasy concepts](/docs/core-concepts#sources).
 
 ### 1. Install the Speakeasy CLI
 
@@ -21,35 +22,33 @@ The Speakeasy workflow supports using an overlay file to modify a source OpenAPI
 brew install speakeasy-api/homebrew-tap/speakeasy
 ```
 
-### 2. Choose source: 
+### 2. Choose the source 
 
-
-To add an overlay to the Speakeasy workflow file, run `speakeasy configure sources` and choose or create a source.
+Run `speakeasy configure sources` and select or create a source to add an overlay to the Speakeasy workflow file.
 
 <Screenshot variant="cli" docs={true}>![Screenshot of the terminal after running speakeasy configure sources.](./assets/overlays-1.png)</Screenshot>
 
-### 3. Add Overlay:
+### 3. Add an overlay
 
+<Screenshot variant="cli" docs={true}>![Screenshot of the terminal prompting the user to add an overlay.](./assets/overlays-2.png)</Screenshot>
 
-<Screenshot variant="cli" docs={true}>![Screenshot of the terminal prompting user to add an overlay.](./assets/overlays-2.png)</Screenshot>
-
-### 4. Provide overlay file path:
+### 4. Provide the overlay file path
 
 
 <Screenshot variant="cli" docs={true}>![Screenshot of the terminal showing a succesful overlay application.](./assets/overlays-3.png)</Screenshot>
 
 
-### 5. Provide location for the output build: 
+### 5. Provide the location for the output build
 
 
 <Screenshot variant="cli" docs={true}>![Screenshot of the terminal showing completed setup.](./assets/overlays-4.png)</Screenshot>
 
 
-The overlay will now be applied to the OpenAPI document as part of the Speakeasy workflow. To execute the workflow, run `speakeasy run`.
+The overlay will now apply to the OpenAPI document as part of the Speakeasy workflow. Execute the workflow by running `speakeasy run`.
 
-## Option Two: Create a new OpenAPI document with an Overlay
+## Option Two: Create a new OpenAPI document with an overlay
 
-This option is ideal for those looking to generate a new source of truth for the OpenAPI document.
+Creating a new OpenAPI document provides the ideal option for generating a new reference document.
 
 
 ### 1. Install the Speakeasy CLI
@@ -58,26 +57,28 @@ This option is ideal for those looking to generate a new source of truth for the
 brew install speakeasy-api/homebrew-tap/speakeasy
 ```
 
-### 2. Validate the Overlay
+### 2. Validate the overlay
 
-Validate the overlay before applying it to ensure it adheres to the OpenAPI Overlay specification. Use the following command:
+Validate the overlay before applying it to ensure adherence to the OpenAPI Overlay Specification using this command:
 
 ```bash
 speakeasy overlay validate -o overlays.yaml
 ```
 
-This command checks the `overlays.yaml` file to confirm that it complies with the OpenAPI Overlay Specification.
 
-### 3. Apply the Overlay
 
-Apply the overlay to the OpenAPI document with the following command, replacing `input-openapi.yaml` with the path to the original OpenAPI spec file and `overlays.yaml` with the path to the overlay file:
+### 3. Apply the overlay
+
+Apply the overlay to the OpenAPI document with this command. Replace `input-openapi.yaml` with the path to the original OpenAPI document, and `overlays.yaml` with the path to the overlay file:
 
 ```bash
 speakeasy overlay apply -s input-openapi.yaml -o overlays.yaml > combined.yaml
 ```
 
-This command merges the changes from the overlay file with the original OpenAPI specification and outputs the result to a new file named `combined.yaml`.
+This command merges changes from the overlay file with the original OpenAPI document and outputs the result to a new file named `combined.yaml`.
 
-### 4. Review the Merged Results
+### 4. Review the merged results
 
-The merged results can be viewed in the `combined.yaml` file, which contains the original OpenAPI specification updated with the modifications from the overlay. It is recommended to review this file to ensure the changes have been applied as expected.
+The `combined.yaml` file contains the original OpenAPI document updated with modifications from the overlay. Review this file to confirm changes are applied as expected.
+
+
