--- a/docs/prep-openapi/transformations.mdx
+++ b/docs/prep-openapi/transformations.mdx
@@ -1,42 +1,42 @@
 ---
 title: "Transformations"
-description: "Transformations are predefined functions in your Speakeasy workflow that can be applied to an OpenAPI document to change its structure."
+description: "Transformations are predefined functions in Speakeasy workflow that can be applied to an OpenAPI document to change its structure."
 ---
 
 import { ScrollyCoding } from "~/components/codehike/Scrollycoding";
 
 # Transformations
 
-Transformations are predefined functions that can be applied to an OpenAPI document to change its structure.
+Transformations are predefined functions that modify an OpenAPI document's structure.
 
 Speakeasy currently supports the following transformations:
 
-- **Remove unused components:** Removes components that are not referenced by any operation.
-- **Filter operations:** Filters operations down to a user-defined set of operation IDs.
-- **Cleanup:** Reformats the document to be more readable and compliant with various parsing tools.
-- **Format:** Changes the order of keys at various levels in the document to be more human-readable.
-- **Convert Swagger to OpenAPI:** Converts a Swagger 2.0 document to an OpenAPI 3.0.x document.
+- **Remove unused components:** Removes components not referenced by any operation
+- **Filter operations:** Filters operations down to a defined set of operation IDs
+- **Cleanup:** Reformats the document for better readability and compliance with various parsing tools
+- **Format:** Changes the order of keys at various levels in the document for improved human readability
+- **Convert Swagger to OpenAPI:** Converts a Swagger 2.0 document to an OpenAPI 3.0.x document
 
 ## Transformations vs. overlays
 
-Transformations and overlays are similar in that they both allow you to modify an OpenAPI document. However, there are some key differences between the two:
+Transformations and overlays both modify OpenAPI documents but differ in key ways:
 
-- **Transformations** are dynamic and will account for any changes to the underlying document. In this way, they are "always up to date". For example,
-if your OpenAPI document updates and a previously unused component becomes used by a newly-added operation, the `removeUnused` transformation will no longer remove it.
-- **Overlays** are more flexible and can change almost any document into any other document. However, unlike transformations, overlays are static and do not evolve with the underlying document.
-Taking the example of removing an unused component, an overlay will continue to remove it even if the underlying document changes and the component becomes used.
+- **Transformations** operate dynamically and account for changes to the underlying document, staying "always up to date." For example,
+if an OpenAPI document updates and a previously unused component becomes used by a newly-added operation, the `removeUnused` transformation will no longer remove it.
+- **Overlays** offer more flexibility and can transform almost any document into any other document. However, overlays remain static and do not adapt with the underlying document.
+For example, when removing an unused component, an overlay continues to remove it even if the underlying document changes and the component becomes used.
 
 
 ## Using transformations
 
-Speakeasy provides two ways to apply transformations to an OpenAPI document.
+Apply transformations to an OpenAPI document in two ways:
 
-1. [Using the CLI](#using-the-cli). This is the easiest and most flexible way to apply transformations to an OpenAPI document.
-2. [As part of your Speakeasy workflow](#in-workflow-files). This is the most powerful way to apply transformations, but requires a bit more setup.
+1. [Using the CLI](#using-the-cli): The easiest and most flexible approach
+2. [As part of a Speakeasy workflow](#in-workflow-files): The most powerful approach, requiring more initial setup
 
 ### Using the CLI
 
-To apply a transformation to an OpenAPI document, use the `speakeasy openapi transform` command. The interactive CLI will walk you through the rest. Here are a few example commands:
+Apply a transformation to an OpenAPI document with the `speakeasy openapi transform` command. The interactive CLI guides through the process. Example commands:
 
 - `speakeasy openapi transform remove-unused -s openapi.yaml`
 - `speakeasy openapi transform filter-operations -s openapi.yaml --operations=getPets,createPet`
@@ -46,21 +46,21 @@ To apply a transformation to an OpenAPI document, use the `speakeasy openapi tra
 
 ### In workflow files
 
-The real utility of transformations comes when you use them in your `workflow.yaml` file. This allows your OpenAPI document to be always up to date with the desired transformations, but requires a bit more setup.
+The greatest utility comes from using transformations in the `workflow.yaml` file. This keeps the OpenAPI document always up to date with desired transformations, though it requires more initial setup.
 
-The `convert-swagger` transformation is an exception, as it cannot be applied as part of a workflow.
+Note that the `convert-swagger` transformation cannot be applied as part of a workflow.
 
 <ScrollyCoding>
 ### !!steps Remove unused components
 
-Remove unused components from the OpenAPI document, preventing them from being included in the generated SDK.
+Remove unused components from the OpenAPI document, preventing inclusion in the generated SDK.
 
 ```yaml ! workflow.yaml
 # !focus(8)
 workflowVersion: 1.0.0
 speakeasyVersion: latest
 sources:
-  my-source:
+  api-source:
     inputs:
       - location: ./openapi.yaml
     transformations:
@@ -75,14 +75,14 @@ sources:
 ---
 ### !!steps Filter operations
 
-Keep or remove the specified operations from the OpenAPI document.
+Keep or remove specified operations from the OpenAPI document.
 
 ```yaml ! workflow.yaml
 # !focus(9:11)
 workflowVersion: 1.0.0
 speakeasyVersion: latest
 sources:
-  my-source:
+  api-source:
     inputs:
       - location: ./openapi.yaml
     transformations:
@@ -97,14 +97,14 @@ sources:
 ---
 ### !!steps Cleanup
 
-Clean up the OpenAPI document, making it more readable and compliant with various parsing tools.
+Clean up the OpenAPI document for improved readability and compliance with various parsing tools.
 
 ```yaml ! workflow.yaml
 # !focus(12)
 workflowVersion: 1.0.0
 speakeasyVersion: latest
 sources:
-  my-source:
+  api-source:
     inputs:
       - location: ./openapi.yaml
     transformations:
@@ -119,14 +119,14 @@ sources:
 ---
 ### !!steps Format
 
-Changes the order of keys at various levels in the document, formatting it to be more human-readable.
+Reorder keys at various document levels for enhanced human readability.
 
 ```yaml ! workflow.yaml
 # !focus(13)
 workflowVersion: 1.0.0
 speakeasyVersion: latest
 sources:
-  my-source:
+  api-source:
     inputs:
       - location: ./openapi.yaml
     transformations:
