--- a/docs/speakeasy-reference/generation/gen-yaml.mdx
+++ b/docs/speakeasy-reference/generation/gen-yaml.mdx
@@ -1,5 +1,4 @@
 import Image from "next/image";
-import { Tabs } from "@speakeasy/nextra-theme";
 import { ScrollyCoding } from "~/components/codehike/Scrollycoding";
 import { Callout } from "~/components";
 import vsCodeImageUrl from "../../assets/vscode.svg";
@@ -44,6 +43,7 @@ generation:
     nameResolutionDec2023: true
     parameterOrderingFeb2024: true
     requestResponseComponentNamesFeb2024: true
+    securityFeb2025: true
   auth:
     OAuth2ClientCredentialsEnabled: true
   baseServerUrl: "speakeasy.bar/public/api/"
@@ -56,7 +56,7 @@ generation:
 
 #### !!steps `generation`
 
-The `generation` section of the `gen.yaml` file supports configuration that is relevant to all SDK targets. If a value isn't configured here, and it has a default value, then that value will be added automatically on the next generation. For more information about SDK generation and targets, see our [core concepts documentation](/docs/core-concepts#sdk-generation).
+The `generation` section of the `gen.yaml` file supports configuration that is relevant to all SDK targets. If a value isn&apos;t configured here, and it has a default value, then that value will be added automatically on the next generation. For more information about SDK generation and targets, see our [core concepts documentation](/docs/core-concepts#sdk-generation).
 
 ```yaml ! gen.yaml
 # !focus(2:17)
@@ -121,9 +121,10 @@ Includes specific fixes or features to be applied during SDK generation to avoid
 - `nameResolutionDec2023`: **Disabling not recommended**. Enables changes introduced in December 2023 for improved name resolution, defaults to `true` for new SDKs. For older SDKs, setting `true` is recommended, but will be a breaking change.  
 - `parameterOrderingFeb2024`: **Disabling not recommended**. Enables changes introduced in February 2024 to respect the order of parameters in the OpenAPI document where possible, defaults to `true` for new SDKs. For older SDKs, setting `true` is recommended, but will be a breaking change.  
 - `requestResponseComponentNamesFeb2024`: **Disabling not recommended**. Enables changes introduced in February 2024 to use the name of parent request/response components where possible, defaults to `true` for new SDKs. For older SDKs, setting `true` is recommended, but will be a breaking change.
+- `securityFeb2025`: **Disabling not recommended**. Enables changes introduced in February 2025 to the security handling at both the global and operation level, particularly needed to enable per-operation OAuth2 flows. Defaults to `true` for new SDKs. For older SDKs, setting `true` is recommended, but will be a breaking change.
 
 ```yaml ! gen.yaml
-# !focus(11:14)
+# !focus(11:15)
 ```
 
 ---
@@ -135,7 +136,7 @@ Includes specific fixes or features to be applied during SDK generation to avoid
 For detailed information about authentication configuration, see our [guide to customizing security and authentication](/docs/customize/authentication/configuration).
 
 ```yaml ! gen.yaml
-# !focus(15:16)
+# !focus(16:17)
 ```
 
 ---
@@ -145,7 +146,7 @@ For detailed information about authentication configuration, see our [guide to c
 Used to declare your base server URL. It overrides the `servers` field in your OpenAPI document if present, or provides a server URL if the `servers` field is absent.
 
 ```yaml ! gen.yaml
-# !focus(17)
+# !focus(18)
 ```
 
 ---
@@ -155,7 +156,7 @@ Used to declare your base server URL. It overrides the `servers` field in your O
 Disables the generation and use of a mock HTTP server with generated tests.
 
 ```yaml ! gen.yaml
-# !focus(18)
+# !focus(19)
 ```
 
 ---
