--- a/docs/create-client-sdks.mdx
+++ b/docs/create-client-sdks.mdx
@@ -1,45 +1,89 @@
 ---
-title: SDK Creation Overview
+title: Generate SDKs from OpenAPI
 description: "Learn how to create production-ready SDKs from your OpenAPI / Swagger spec using Speakeasy."
 ---
 
 import { Callout } from "~/components";
-import { SupportedLanguagesData } from "~/data/shared/supportedLanguages"; 
+import { SupportedLanguagesData } from "~/data/shared/supportedLanguages";
 import { IconGrid } from "~/features/shared/recipes";
+import { CodeWithTabs } from "~/components/codehike/CodeTabs";
+import { SignUpButton } from "~/features/shared/recipes";
 
-# SDK Creation Overview
+# Generate SDKs from OpenAPI
 
-<IconGrid { ...SupportedLanguagesData } />
+Generating your first SDK with Speakeasy takes no more than a few minutes. Follow these steps to get started.
 
-## Prerequisites
+## Sign up for Speakeasy
+First sign up for a free Speakeasy account at [https://app.speakeasy.com](https://app.speakeasy.com).
 
-- Install the Speakeasy CLI using one of the following methods:
+<SignUpButton className="w-fit my-8"/>
 
-```bash
+New accounts start with a 14 day free trial of Speakeasy's business tier, to enable users to try out every SDK generation feature. At the end of the trial, accounts will revert to the free tier. No credit card is required.
+
+Free accounts can continue to generate one SDK with up to 50 API methods free of charge.
+
+---
+
+## Install the Speakeasy CLI
+
+After signing up, install the Speakeasy CLI using one of the following methods:
+
+<CodeWithTabs>
+
+```bash !!tabs Homebrew
 # Homebrew (macOS)
 brew install speakeasy-api/homebrew-tap/speakeasy
+```
 
+```bash !!tabs Script
 # Script Installation (macOS and Linux)
 curl -fsSL https://go.speakeasy.com/cli-install.sh | sh
+```
 
+```bash !!tabs Winget
 # Windows Installation
 # Using winget:
 winget install speakeasy
+```
 
+```bash !!tabs Choclatey
 # Using Chocolatey:
 choco install speakeasy
 ```
+</CodeWithTabs>
 
 For manual installation, download the latest release from the [releases page](https://github.com/speakeasy-api/speakeasy/releases), extract the binary, and add it to the system path.
 
-- Provide an API specification in one of the supported formats:
+---
+
+## Speakeasy Quickstart
+
+For first-time SDK generation, run `speakeasy quickstart`.
+
+```bash
+speakeasy quickstart
+```
+
+The CLI will prompt you to authenticate with your Speakeasy account. A browser window will open where you can select a workspace to associate the CLI with. You can always change workspaces later if required.
+
+---
+
+## Upload an OpenAPI document
+
+After authenticating you will be prompted to input an OpenAPI document:
+
+<Screenshot variant="cli" docs={true}>
+  ![Screenshot of the terminal after running speakeasy
+  quickstart.](./assets/create-sdks/quickstart-1.png)
+</Screenshot>
+
+Provide either a link to a remote hosted OpenAPI document, or a relative path to a local file in one of the supported formats:
 
 | Spec Format         | Supported |
 | ------------------- | :-------: |
 | OpenAPI 3.0         |    ✅     |
 | OpenAPI 3.1         |    ✅     |
 | JSON Schema         |    ✅     |
-| Postman Collections |    🔜     |
 
 <Callout title="TIP" variant="success">
   If your spec is in an unsupported format, use one of the following tools to convert it:
@@ -49,80 +93,62 @@ For manual installation, download the latest release from the [releases page](ht
 
 </Callout>
 
-## Interactive SDK Generation With CLI Quickstart
+---
 
-For first-time SDK generation with Speakeasy, start with `speakeasy quickstart`. Install the Speakeasy CLI using `brew install speakeasy-api/tap/speakeasy`.
+## Select an SDK language
 
-Run the following command to start the quickstart process:
+After configuring the OpenAPI document, the next step prompt is to name your SDK. It's best to name the SDK after the company or project it's being used for.
 
-```bash
-speakeasy quickstart
-```
-
-This command initiates an interactive session for SDK generation. The process requires creating a workspace on the [dashboard](https://app.speakeasy.com/).
-
-<Screenshot variant="cli" docs={true}>
-  ![Screenshot of the terminal after running speakeasy
-  quickstart.](./assets/create-sdks/quickstart-1.png)
-</Screenshot>
-
-The next step prompts for SDK language selection:
-
-<Screenshot variant="cli" docs={true}>
-  ![Screenshot of the terminal prompting user to select
-  language.](./assets/create-sdks/quickstart-2.png)
-</Screenshot>
-
-Complete the prompted parameter configuration:
+Choose a name for your SDK. And pick an SDK output directory.
 
 <Screenshot variant="cli" docs={true}>
   ![Screenshot of the terminal with optional
-  parameters.](./assets/create-sdks/quickstart-3.png)
+  parameters.](./assets/create-sdks/quickstart-2.png)
+</Screenshot>
+
+There will then be a language selection prompt:
+
+<Screenshot variant="cli" docs={true}>
+  ![Screenshot of the terminal prompting user to select
+  language.](./assets/create-sdks/quickstart-3.png)
+</Screenshot>
+
+For each language,Speakeasy has crafted generators with language experts to be highly idiomatic. Follow the links below for all the details on the design decisions that have gone into each language we support:
+
+<IconGrid { ...SupportedLanguagesData } />
+
+## Complete the SDK configuration
+
+The final steps are to configure a package name for the SDK package and pick an SDK output directory. The package name will only be relevant, when it comes time to publish the package. The CLI will infer a name from the OpenAPI document, which can be optionally overwritten.
+
+Then you specify the output directory for the generated SDK.
+
+<Screenshot variant="cli" docs={true}>
+![Screenshot of the terminal with optional
+parameters.](./assets/create-sdks/quickstart-4.png)
 </Screenshot>
 
 Speakeasy validates the specifications and generates the SDK after receiving all inputs. The process executes [`speakeasy run`](/docs/speakeasy-reference/cli/run) to validate, generate, compile, and set up the SDK. A confirmation message displays the generated SDK details upon successful completion:
 
 <Screenshot variant="cli" docs={true}>
   ![Screenshot of the terminal showing
-  success.](./assets/create-sdks/quickstart-4.png)
+  success.](./assets/create-sdks/quickstart-5.png)
 </Screenshot>
 
-Re-run the `speakeasy run` command after making changes to the OpenAPI document or SDK configuration.
+---
 
-Set up the SDK on GitHub for a fully managed experience. See the GitHub setup guide [here](/docs/manage/github-setup).
+## Iterating on the SDK
 
-## Traditional SDK Generation
+If the SDK is successfully generated, there will be a prompt asking the user to open the SDK studio. The Studio is a web GUI that helps users make look & feel improvements to their SDKs. It uses [OpenAPI Overlays](/openapi/overlays) to preserve the original OpenAPI specification while allowing users to make changes to the generated SDK.
 
-The non-interactive approach allows specifying all parameters in a single command, suitable for script integration and automation. This method requires manual configuration of the workflow to validate, generate, compile, and publish the SDK.
+Saved changes in the Studio automatically triggers a regeneration of the SDK locally.
 
-The recommended approach remains using `speakeasy quickstart` and `run` as shown in the [quickstart section](#interactive-sdk-generation-with-cli-quickstart) above.
+<Screenshot variant="webapp" docs={true}>
+  ![Screenshot of the Speakeasy Studio.](./assets/create-sdks/studio-1.png)
+</Screenshot>
 
-```shell
-speakeasy generate sdk --out <output_directory> --schema <specification_path_or_url> [options]
-```
+It is also posisble to make changes without the Studio. Check out the following guide on [customizing your SDKs](/docs/customize-sdks/) for all the details.
 
-### Required Parameters:
+## Next Step: Uploading your SDK to GitHub
 
-```
---out: Destination for the generated SDK.
---schema: Path or URL to your API spec.
-```
-
-### Additional Options
-
-```
-  -y, --auto-yes                 auto answer yes to all prompts
-  -d, --debug                    enable writing debug files with broken code
-  -H, --header string            header key to use if authentication is required for downloading schema from remote URL
-  -h, --help                     help for sdk
-  -i, --installationURL string   the language specific installation URL for installation instructions if the SDK is not published to a package manager
-  -l, --lang string              language to generate sdk for (available options: [csharp, go, java, php, python, ruby, swift, terraform, typescript, unity]) (default "go")
-  -p, --published                whether the SDK is published to a package manager or not, determines the type of installation instructions to generate
-  -r, --repo string              the repository URL for the SDK, if the published (-p) flag isn't used this will be used to generate installation instructions
-  -b, --repo-subdir string       the subdirectory of the repository where the SDK is located in the repo, helps with documentation generation
-      --token string             token value to use if authentication is required for downloading schema from remote URL
-```
-
-## Next Step: Customize Your SDK
-
-Generating SDKs is the first step but there are several optimizations you can make to improve the quality of your SDKs. Check out the following guide on [customizing your SDKs](/docs/customize-sdks/).
+Once the SDK is looking good, you can upload it to GitHub. Follow the [Github setup guide](/docs/manage/github-setup)
