--- a/docs/customize/code/code-regions/overview.mdx
+++ b/docs/customize/code/code-regions/overview.mdx
@@ -9,6 +9,7 @@ import { Callout } from "~/components";
 
 <Callout title="Availability" variant="info">
   Custom code regions are only available for [Enterprise users](/pricing).
+  You must also enable the Custom code regions in `settings/billing` under your account.
 </Callout>
 
 Generally, the Speakeasy code generator "owns" the files it generates. If
