--- a/docs/customize/globals.mdx
+++ b/docs/customize/globals.mdx
@@ -79,7 +79,7 @@ Global parameters can be used with `in: query`, `in: path`, or `in: header` fiel
 
 The global parameter definitions in the sample above will generate the following output:
 
-<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#']}>
+<Tabs items={['TypeScript', 'Python', 'Go', 'Java', 'C#', 'PHP']}>
 
 <Tabs.Tab>
 
@@ -212,6 +212,31 @@ try {
   // handle response
 } catch (SDKException ex) {
   // handle exception
+}
+```
+
+</Tabs.Tab>
+
+<Tabs.Tab>
+
+```php
+<?php
+
+declare(strict_types=1);
+
+require 'vendor/autoload.php';
+
+use OpenAPI\OpenAPI;
+use OpenAPI\OpenAPI\Models\Components;
+use OpenAPI\OpenAPI\Models\Operations;
+
+$sdk = OpenAPI\SDK::builder()->setCustomerId("1291fbe8-4afb-4357-b1de-356b65c417ca")->build();
+
+try {
+    $response = $sdk->getCustomer(request=new GetCusomterRequest());
+    // handle response
+} catch (OpenAPI\ErrorThrowable $e) {
+    // handle exception
 }
 ```
 
