--- a/docs/integrations/_get-public-url-snippet.mdx
+++ b/docs/integrations/_get-public-url-snippet.mdx
@@ -1,23 +1,21 @@
 {/* This snippet is made to be reused in docs that require instruction on grabbing the Public URL. */}
 
-# Get Public URL from Registry
+### Get the API's combined spec public URL from the registry
 
-First, navigate to the [Speakeasy Dashboard](https://app.speakeasy.com) and open
-the API Registry tab. Once there, open the `*-with-code-samples` entry for the
-desired API.
+Navigate to the [Speakeasy Dashboard](https://app.speakeasy.com) and open the **API Registry** tab. Open the `*-with-code-samples` entry for the API.
 
 <Screenshot darkened docs={true}>
-  ![Speakeasy OpenAPI
-  Registry](../assets/code-samples/openapi-registry-and-combined-spec.png)
+  ![Screenshot showing the Speakeasy API
+  Registry page](../assets/code-samples/openapi-registry-and-combined-spec.png)
 </Screenshot>
 
-> NOTE: If this entry is not labeled with `Combined Spec`, ensure that the API
-> has an [Automatic Code Sample
+> NOTE: If the entry is not labeled **Combined Spec**, ensure that the API
+> has an [automatic code sample
 > URL](/docs/code-samples/automated-code-sample-urls) configured.
 
 From the registry entry's page, copy the provided public URL.
 
 <Screenshot darkened docs={true}>
-  ![Combined Spec Registry
-  Entry](../assets/code-samples/copy-combined-spec-url.png)
+  ![Screenshot showing the combined spec registry
+  entry with the copy URL function highlighted](../assets/code-samples/copy-combined-spec-url.png)
 </Screenshot>
