--- a/docs/integrations/bump.mdx
+++ b/docs/integrations/bump.mdx
@@ -1,70 +1,49 @@
 ---
 slug: /bump/
 sidebar_label: Integrate With Bump.sh
-title: Integrate Speakeasy With Bump.sh
-description: "Learn how to integrate Speakeasy SDKs into Bump.sh docs."
+title: Integrate Speakeasy with Bump.sh
+description: "Learn how to integrate Speakeasy code generation into Bump.sh docs."
 ---
 
 import { Callout } from "~/components";
 import GetPublicUrlSnippet from "./_get-public-url-snippet.mdx";
 
-# Integrate Speakeasy With Bump.sh
+# Integrate Speakeasy with Bump.sh
 
 ---
 
-## Overview
 
-Bump.sh is a hosted solution for simple API documentation, API catalogs, and API
-explorers, which makes it a great tool to use in conjunction with [Speakeasy's
-Automated Code Samples feature](/docs/code-samples/automated-code-sample-urls).
-Embed your SDKs right into the API documentation, making it easier for
-developers to get started with your API.
+
+Bump.sh is a hosted solution for simple API documentation, API catalogs, and API explorers, which makes it a great tool to use in conjunction with [Speakeasy's Automated Code Samples feature](/docs/code-samples/automated-code-sample-urls). Embed your SDKs right into the API documentation, making it easier for developers to get started with your API.
 
 <Screenshot darkened url="docs.myapi.com" docs={true}>
-  ![Bump.sh Docs with Speakeasy SDK code samples](../assets/code-samples/bump-with-speakeasy-openapi.png)
+  ![Bump.sh docs with Speakeasy SDK code samples](../assets/code-samples/bump-with-speakeasy-openapi.png)
 </Screenshot>
 
-## Setting up the Integration
+## Prerequisites
 
-### Prerequisites
+To integrate Bump.sh with Speakeasy, you'll need the following:
 
-<Callout title="IMPORTANT" variant="warning">
-  Before continuing with this guide, ensure that the following prerequisites
-  have been met:
-  <br />
-  <ul className="list-disc pl-5">
-    <li className="marker:content-['✓__']">
-      {"An "}
-      <a href="/docs/code-samples/automated-code-sample-urls">
-        {"Automated Code Sample URL"}
-      </a>
-      {" has been configured for the desired Speakeasy SDK, and"}
-    </li>
-    <li className="marker:content-['✓__']">
-      {"Created an account on "} <a href="https://bump.sh">Bump.sh</a>
-      {"."}
-    </li>
-  </ul>
-  Once those requirements have been met, proceed with the following steps.
-</Callout>
+ - A Bump.sh account. Sign up at [https://bump.sh/users/sign_up](https://bump.sh/users/sign_up).
+ - A Speakeasy-generated SDK with a configured [automated code sample URL](/docs/code-samples/automated-code-sample-urls).
 
-### Locate & Copy the Combined Spec URL
+
+
+## Setting up the integration
 
 <GetPublicUrlSnippet />
 
-### Import the Combined Spec URL into Bump.sh
+### Import the combined spec URL into Bump.sh
 
-Next, head over to your Bump.sh dashboard and either create "New Documentation",
-or open existing API documentation. Click "Settings" and open the "Automatic Deployment" tab.
+In the Bump.sh dashboard, either create **New Documentation** or open existing API documentation. Click **Settings** and open the **Automatic Deployment** tab.
 
 <Screenshot darkened url="bump.sh/dashboard" docs={true}>
-  ![Bump.sh Auotmatic Deployment Settings](../assets/code-samples/bump-automatic-deployment-settings.png)
+  ![Bump.sh automatic deployment settings](../assets/code-samples/bump-automatic-deployment-settings.png)
 </Screenshot>
 
-Pick whether you want to deploy via GitHub Actions or CLI, and copy the
-appropriate example which will include the Doc ID and the API token for you.
+Select whether you want to deploy via GitHub Actions or CLI, and copy the appropriate example, which will include the Doc ID and the API token for you.
 
-If you're just starting out, let's start with the CLI. Open your terminal and run the following command:
+If you're new to Bump.sh, start with the CLI. Open a terminal and run the following command:
 
 ```bash
 npm install -g bump-cli
@@ -74,20 +53,14 @@ bump deploy https://spec.speakeasy.com/walker/walker/book-club-oas-with-code-sam
   --doc=<your-doc-id>
 ```
 
-After the import has completed, the API documentation will be rendered, and your
-SDKs will be embedded as code samples in each OpenAPI operation.
+When the import is complete, the API documentation will be rendered, and Speakeasy-generated code samples will be embedded in the relevant OpenAPI operations.
 
 <Screenshot darkened url="bump.sh/your-docs" docs={true}>
-  ![Bump.sh Docs with Speakeasy Code Samples](../assets/code-samples/bump-with-speakeasy-openapi.png)
+  ![Bump.sh docs with Speakeasy code samples](../assets/code-samples/bump-with-speakeasy-openapi.png)
 </Screenshot>
 
-## What Next?
+## Next steps
 
-This is a basic setup, so for more advanced configurations, you can refer to the
-[Bump.sh and Speakeasy integration
-guide](https://docs.bump.sh/guides/bump-sh-tutorials/generate-sdks-with-speakeasy/)
-which will demonstrate using GitHub Actions to automate deployments.
+For more advanced configurations than this basic setup, refer to the [Bump.sh and Speakeasy integration guide](https://docs.bump.sh/guides/bump-sh-tutorials/generate-sdks-with-speakeasy/), which demonstrates using GitHub Actions to automate deployments.
 
-Bump.sh is much more than just an OpenAPI spec renderer, it offers API catalogs,
-discovering, and playgrounds. Learn more about Bump.sh on their [official
-documentation](https://docs.bump.sh/).
+Bump.sh is more than just an OpenAPI renderer – it also provides API catalogs, discovery tools, and interactive playgrounds. Learn more about Bump.sh in the [official documentation](https://docs.bump.sh/).
