--- a/docs/integrations/scalar.mdx
+++ b/docs/integrations/scalar.mdx
@@ -1,83 +1,59 @@
 ---
 slug: /scalar/
 sidebar_label: Integrate With Scalar
-title: Integrate Speakeasy With Scalar
+title: Integrate Speakeasy with Scalar
 description: "Learn how to integrate Speakeasy code generation into Scalar docs."
 ---
 
 import { Callout } from "~/components";
 import GetPublicUrlSnippet from "./_get-public-url-snippet.mdx";
 
-# Integrate Speakeasy With Scalar
+# Integrate Speakeasy with Scalar
 
 ---
 
-## Overview
 
-**Scalar** makes creating and maintaining API documentation _very_ easy. It is
-able to to render documentation by referencing a live OpenAPI spec, making it a
-great tool to use in conjunction with [Speakeasy's Automated Code Samples
-feature](/docs/code-samples/automated-code-sample-urls).
+
+With **Scalar**, you can easily create and maintain API documentation. Scalar renders documentation by referencing a live OpenAPI document, making it compatible with [Speakeasy's Automated Code Samples feature](/docs/code-samples/automated-code-sample-urls).
 
 <Screenshot darkened url="docs.myapi.com" docs={true}>
-  ![Scalar Docs with Successful Linked
+  ![Scalar docs with successful linked
   URL](../assets/code-samples/scalar-docs-url-imported.png)
 </Screenshot>
 
-## Setting up the Integration
+## Prerequisites
 
-### Prerequisites
+To integrate Scalar with Speakeasy, you'll need the following:
 
-<Callout title="IMPORTANT" variant="warning">
-  Before continuing with this guide, ensure that the following prerequisites
-  have been met:
-  <br />
-  <ul className="list-disc pl-5">
-    <li className="marker:content-['✓__']">
-      {"An "}
-      <a href="/docs/code-samples/automated-code-sample-urls">
-        {"Automated Code Sample URL"}
-      </a>
-      {" has been configured for the desired Speakeasy SDK, and"}
-    </li>
-    <li className="marker:content-['✓__']">
-      {"Created an account on "} <a href="https://scalar.com">Scalar</a>
-      {"."}
-    </li>
-  </ul>
-  Once those requirements have been met, proceed with the following steps.
-</Callout>
+- A Scalar account. Sign up at [https://dashboard.scalar.com/register](https://dashboard.scalar.com/register).
+- A Speakeasy-generated SDK with a configured [automated code sample URL](/docs/code-samples/automated-code-sample-urls).
 
-### Locate & Copy the Combined Spec URL
+## Setting up the integration
 
 <GetPublicUrlSnippet />
 
-### Import the Combined Spec URL into Scalar
+### Import the combined spec URL into Scalar
 
-Next, open a [Scalar project](https://docs.scalar.com), open the **Reference**
-tab, then click **Import URL**.
-
-<Screenshot darkened url="docs.scalar.com" docs={true}>
-  ![Scalar Doc Maker](../assets/code-samples/scalar-reference-to-import-url.png)
-</Screenshot>
-
-Finally, paste the copied URL into the provided field, check **Create Live Link**
-(optional), then click **Import**.
+Open a [Scalar project](https://docs.scalar.com), go to the **Reference** tab, and click **Import URL**.
 
 <Screenshot darkened url="docs.scalar.com" docs={true}>
-  ![Linking Scalar to Speakeasy Public
-  URL](../assets/code-samples/scalar-link-openapi-specification-modal.png)
+  ![Screenshot of the Scalar UI Project Reference tab, showing the Import URL link](../assets/code-samples/scalar-reference-to-import-url.png)
 </Screenshot>
 
-After the import process has completed, the API documentation will be rendered.
+Paste the combined spec URL copied from Speakeasy into the provided field, optionally check **Create Link**, then click **Import**.
+
+<Screenshot darkened url="docs.scalar.com" docs={true}>
+  ![Screenshot of the Scalar page where the public
+  URL from Speakeasy is added](../assets/code-samples/scalar-link-openapi-specification-modal.png)
+</Screenshot>
+
+When the import is complete, the API documentation will be rendered.
 
 <Screenshot darkened url="docs.scalar.com">
-  ![Scalar Docs with Successful Linked
+  ![Screenshot showing API documentation in Scalar after successfully linking the
   URL](../assets/code-samples/scalar-docs-url-imported.png)
 </Screenshot>
 
-## What Next?
+## Next steps
 
-Scalar is much more than just an OpenAPI spec renderer. Continue to learn more
-about Scalar by visiting their [official
-documentation](https://guides.scalar.com/scalar/introduction).
+Scalar is more than just an OpenAPI renderer. Visit the [official Scalar documentation](https://guides.scalar.com/scalar/introduction) to learn more.
