--- a/docs/languages/maturity.mdx
+++ b/docs/languages/maturity.mdx
@@ -5,32 +5,32 @@ slug: /code-generation-concepts/
 sidebar_label: Language Maturity
 ---
 
-# Language Maturity Concepts
+# Language maturity concepts
 
 Speakeasy creates and maintains SDKs (generation targets) for your API. This page explains the terminology used to describe these generation targets.
 
-## Maturity Levels
+## Maturity levels
 
 
-| Maturity Level         | Description                                                                                                                      |
+| Maturity level         | Description                                                                                                                      |
 |------------------------|----------------------------------------------------------------------------------------------------------------------------------|
 | **Alpha**              | An early preview of upcoming features intended for gathering feedback. Alpha versions are less complete and likely to be unstable, with frequent updates and significant changes expected. |
 | **Beta**               | A pre-release version that includes many features of GA but is still subject to significant modifications based on user feedback. The interface is considered stable enough for general usage and wide coverage of OpenAPI is available. |
-| **General Availability (GA)** | A fully supported release that includes all functionalities altering the type interface from OpenAPI Specification keywords (for example, [`oneOf`](/docs/customize-sdks/oneof-schemas), [`anyOf`](/openapi/schemas/objects/polymorphism), [`allOf`](/openapi/schemas/objects/polymorphism), [`const`](/docs/customize-sdks/types#const), and [`default`](/docs/customize-sdks/types#default)). GA versions follow semantic versioning (SemVer) and maintain interface stability for non-breaking OpenAPI changes unless you opt into such changes. |
+| **General availability (GA)** | A fully supported release that includes all functionalities altering the type interface from OpenAPI Specification keywords (for example, [`oneOf`](/docs/customize-sdks/oneof-schemas), [`anyOf`](/openapi/schemas/objects/polymorphism), [`allOf`](/openapi/schemas/objects/polymorphism), [`const`](/docs/customize-sdks/types#const), and [`default`](/docs/customize-sdks/types#default)). GA versions follow semantic versioning (SemVer) and maintain interface stability for non-breaking OpenAPI changes unless you opt into such changes. |
 
-## Feature Support Levels
+## Feature support levels
 
 Feature support levels indicate the extent of additional functionalities provided.
 
-| Feature Support Level | Description                                                                                                                                                                                                                              |
+| Feature support level | Description                                                                                                                                                                                                                              |
 |-----------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | **Gold**              | Indicates full feature support, including all opt-in enhancements such as [Pagination](/docs/customize-sdks/pagination), [Retries](/docs/customize-sdks/retries), [Server Templates](/docs/customize-sdks/servers), [Hooks](/docs/customize/code/sdk-hooks), [OAuth 2.0 Client Credentials](/docs/customize/authentication/oauth#client-credentials-flow), and more. A target can be in Beta and still have Gold-level feature support. |
 | **Level 2**           | Extends the type interface by synthesizing multiple API calls into single interactions. This is achieved using specified [links](https://spec.openapis.org/oas/v3.1.0#link-object) (hyperlinks between API operations as defined by the OpenAPI Specification), [Arazzo workflows](https://github.com/OAI/Arazzo-Specification/blob/main/versions/1.0.0.md) (predefined sequences of API calls), and [Speakeasy extensions](/docs/terraform) (custom enhancements for better API integration). |
 | **Level 1**           | Provides essential functionalities and basic support without the advanced features found in Gold or Level 2. Targets with Standard support are stable and reliable but do not include all opt-in enhancements or extended interface capabilities. |
 
-## Target Language Support
+## Target language support
 
-| Target      | Maturity Level | Feature Support Level |
+| Target      | Maturity level | Feature support level |
 |-------------|----------------|-----------------------|
 | [TypeScript](/docs/languages/typescript/methodology-ts) | GA | Gold |
 | [Go](/docs/languages/golang/methodology-go) | GA | Gold |
@@ -38,13 +38,13 @@ Feature support levels indicate the extent of additional functionalities provide
 | [Python - Pydantic & Async](/docs/languages/python/methodology-python) | GA | Gold |
 | [C#](/docs/languages/csharp/methodology-csharp) | GA | Gold |
 | [Terraform](/docs/create-terraform) | GA | Level 2 |
+| [PHP](/docs/languages/php/methodology-php) | GA | Level 1 |
 | [Unity](/docs/languages/unity/methodology-unity) | Beta | Level 1 |
 | [PHP](/docs/languages/php/methodology-php) | Beta | Level 1 |
-| [Swift](/docs/languages/swift/methodology-swift) | Alpha | Level 1 |
 | [Ruby](/docs/languages/ruby/methodology-ruby) | Alpha | Level 1 |
 | Postman | Alpha | Level 1 |
 
-## Deprecated Generation Targets
+## Deprecated generation targets
 
 * TypeScript Beta (v1)
 * Java Beta (v1)
