--- a/docs/languages/philosophy.mdx
+++ b/docs/languages/philosophy.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /sdk-design/methodology/
-title: Our Design Philosophy
+title: Our design philosophy
 description: "Learn about Speakeasy's SDK design methodology, which prioritizes minimal dependencies, type safety, and easy debugging."
 ---
 
@@ -8,16 +8,16 @@ import { IconGrid } from "~/features/shared/recipes";
 import { SupportedLanguagesData } from "~/data/shared/supportedLanguages";
 import { OSSComparisonData } from "~/data/shared/ossComparisons";
 
-# Our Design Philosophy
+# Our design philosophy
 
-SDKs are a critical interface for an API. We therefore put a lot of thought into what the developer experience should be:
+SDKs are a critical interface for an API, which is why we put a lot of thought into developer experience. Our philosophy is that SDKs should be:
 
-- **Type safe** - The SDKs we generate are fully typed, ensuring customers can catch errors early and often.
-- **Human readable** - The SDKs we generate are easy for developers to read and debug in the customer's IDE. We avoid convoluted abstractions.
-- **Batteries-included** - The SDKs we generate include everything from telemetry and retries to pagination.
-- **Fault tolerant** - Our generator is easy to use and outputs usable SDKs wherever possible. If we can't output a working SDK, we will validate your OpenAPI spec and alert you of the problems.
-- **Beyond OpenAPI** - Our generator covers OpenAPI and can extend where OpenAPI falls short.
-- **Minimal dependencies** - Our SDKs are meant to be powerful but lean. We start with native language libraries and layer on third-party libraries only when the customer benefits far outweigh the cost of the extra dependency. We avoid adding unnecessary dependencies. 
+- **Type safe:** The SDKs we generate are fully typed, ensuring customers can catch errors early and often.
+- **Human readable:** The SDKs we generate are easy for developers to read and debug in the customer's IDE. We avoid convoluted abstractions.
+- **Batteries-included:** The SDKs we generate include everything from telemetry and retries to pagination.
+- **Fault tolerant:** Our generator is easy to use and outputs usable SDKs wherever possible. If we can't output a working SDK, we will validate your OpenAPI document and alert you to any problems.
+- **Capable of going beyond OpenAPI:** Our generator covers the OpenAPI Specification and can extend where OpenAPI falls short.
+- **Lean:** Our SDKs are meant to be powerful but lean, with minimal dependencies. We start with native language libraries and layer on third-party libraries only when the customer benefits far outweigh the cost of the extra dependency. We avoid adding unnecessary dependencies. 
 
 Please see the table below for language-specific details.
 
