--- a/docs/manage/migrate/python-migration.mdx
+++ b/docs/manage/migrate/python-migration.mdx
@@ -1,16 +1,16 @@
 ---
-title: "Migrating from Python v1"
-description: "Migrating from Python v1."
+title: "Migrate from the Python v1 SDK"
+description: "Migrate from Python v1 to v2."
 ---
 
-# Upgrading to Python v2 SDK with Speakeasy CLI
+# Upgrade to the Python v2 SDK with the Speakeasy CLI
 
-To upgrade your Python SDK to version 2 using the Speakeasy CLI, please follow these steps:
+To upgrade your Python SDK to Python v2 using the Speakeasy CLI, follow these four steps:
 
-## 1. Update the `gen.yaml` file
+## Update the `gen.yaml` file
 
 - Add `templateVersion: v2` to the Python section of your `gen.yaml` file.
-- If you have an `additionalDependencies` section under Python, it needs modification. If it hasn’t been changed previously, you can delete it and it will be recreated in the correct format. Otherwise, modify it from this:
+- If you have an `additionalDependencies` section under `python`, it needs modification. If you haven't changed it previously, you can delete it and it will be recreated in the correct format. Otherwise, modify it from this:
 
      ```yaml
      additionalDependencies:
@@ -27,13 +27,13 @@ To upgrade your Python SDK to version 2 using the Speakeasy CLI, please follow t
        main: {}
      ```
 
-- Move any dependencies listed under the `dependencies` key to `main`.
-- Move any dependencies under `extraDependencies.dev` to `dev`.
-- Move any additional keys under `extraDependencies` to the top-level `additionalDependencies` next to the other keys.
+  - Move any dependencies listed under the `dependencies` key to `main`.
+  - Move any dependencies under `extraDependencies.dev` to `dev`.
+  - Move any additional keys under `extraDependencies` to the top-level `additionalDependencies` next to the other keys.
 
-## 2. Update the `author` key
+## Update the `author` key
 
-- Change the old `author` key under `python` to the new `authors` key, which is an array of authors.
+- Change the old `author` key, under `python`, to the new `authors` key, which is an array of authors.
 
      ```yaml
      python:
@@ -42,15 +42,15 @@ To upgrade your Python SDK to version 2 using the Speakeasy CLI, please follow t
        # other configurations...
      ```
 
-## 3. Generate the Python v2 SDK
+## Generate the Python v2 SDK
 
-- Run `speakeasy run` to generate the Python v2 SDK.
+- Run the `speakeasy run` command to generate the Python SDK.
 
-## 4. Adjust imports for Python v2
+## Adjust the imports for Python v2
 
-One of the main changes in Python v2 is how imported packages are handled. In version 1, the `sdkClassName` specified the top-level module. In version 2, `packageName` is now used for imports, and matches the expected naming conventions for packages installed from PyPI. Some code imports may need to be adjusted for this change.
+One of the main changes in Python v2 is how imported packages are handled. In version 1, `sdkClassName` specified the top-level module. In version 2, `packageName` is now used for imports, and matches the expected naming conventions for packages installed from PyPI. Some code imports may need to be adjusted for this change.
 
-For example, given `sdkClassName` of `speakeasy` and `packageName` of `speakeasy-sdk`, previously the code was generated in the `src/speakeasy` directory and imported with the following code:
+For example, given the `sdkClassName` of `speakeasy` and the `packageName` of `speakeasy-sdk`, the code was previously generated in the `src/speakeasy` directory and imported as follows:
 
 ```python
 from speakeasy import Speakeasy
@@ -62,7 +62,7 @@ In version 2, the code is generated in the `src/speakeasy_sdk` directory and imp
 from speakeasy_sdk import Speakeasy
 ```
 
-- If you have custom hooks, move the custom hook files and the hook registration logic in `registration.py` from the old `sdkClassName`-based code generation directory to the new `packageName`-based code generation directory and update imports accordingly. For example:
+- If you have custom hooks, move the custom hook files and the hook registration logic in `registration.py` from the old `sdkClassName`-based code-generation directory to the new `packageName`-based code-generation directory and update the imports accordingly:
 
      ```python
      # Old import
