--- a/docs/manage/sdk-sandbox.mdx
+++ b/docs/manage/sdk-sandbox.mdx
@@ -1,5 +1,5 @@
 ---
-title: SDK sandboxes
+title: SDK Sandboxes
 description: "SDK Sandboxes offer users an intuitive, browser-based sandbox environment to explore the capabilities of your SDK."
 ---
 
@@ -7,15 +7,15 @@ import { Callout } from '~/components'
 
 # SDK Sandboxes
 
-Speakeasy can seamlessly generate dev container configurations for your SDK repositories to give you and your SDK consumers an intuitive, predefined sandbox environment to explore the capabilities of your SDK. Beyond setting up this environment, Speakeasy has CLI commands that allow SDK users to effortlessly generate example usage snippets for any API operation within this container setting.
+Speakeasy can generate dev container configurations for your SDK repositories to give you and your SDK consumers an intuitive, predefined sandbox environment to explore the capabilities of your SDK. Beyond setting up this environment, Speakeasy has CLI commands that allow SDK users to effortlessly generate example usage snippets for any API operation within this container setting.
 
 <Callout title="TIP" variant="success">SDK Sandboxes are currently available in Go, TypeScript, and Python SDKs.</Callout>
 
 ## Configuring SDK Sandboxes
 
-To set up the automatically generated dev container configurations, you'll need to make minor adjustments to your `gen.yaml` file. The `schemaPath` shown below should reference your SDK's OpenAPI spec, which can be a local path or a remote URL.
+To set up the automatically generated dev container configurations, you'll need to make minor adjustments to your `gen.yaml` file. The `schemaPath` shown below should reference your SDK's OpenAPI document, which can be a local path or a remote URL.
 
-**Dev Container gen.yaml**:
+**Dev container `gen.yaml`:**
 
 ```yaml
 configVersion: 1.0.0
@@ -25,9 +25,9 @@ generation:
     schemaPath: ./openapi.yaml
 ```
 
-The result of generation will be a newly created `.devcontainer` directory containing a configuration file like the one shown below.
+Generation will create a `.devcontainer` directory containing a configuration file similar to below.
 
-**Generated devcontainer.json**:
+**Generated `devcontainer.json`:**
 
 ```json
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
@@ -91,8 +91,8 @@ The result of generation will be a newly created `.devcontainer` directory conta
 }
 ```
 
-## Using SDK Sandboxes in the Browser
+## Using SDK Sandboxes in the browser
 
 Your SDK users can instantly initialize a sandbox in [GitHub Codespaces](https://docs.github.com/en/codespaces/overview) with a single click. By default, GitHub Codespaces shifts the cost to the user. However, you have the option to [configure your organization](https://docs.github.com/en/codespaces/managing-codespaces-for-your-organization/enabling-or-disabling-github-codespaces-for-your-organization) to offer complimentary codespaces to your users if you prefer.
 
-![Screenshot of a README featuring a Dev Container badge](../assets/dev-container.png)
+![Screenshot of a README featuring a dev container badge](../assets/dev-container.png)
