--- a/docs/prep-openapi/best-practices.mdx
+++ b/docs/prep-openapi/best-practices.mdx
@@ -7,17 +7,17 @@ import { ScrollyCoding } from "~/components/codehike/Scrollycoding";
 
 # OpenAPI overview and best practices
 
-OpenAPI is a standard for describing RESTful APIs. Developers use OpenAPI to define an API's core elements, like endpoints, request and response data formats, authentication methods, and so on.
+OpenAPI is a standard for describing RESTful APIs. OpenAPI defines an API's core elements, like endpoints, request and response data formats, authentication methods, and more.
 
 Several versions of the OpenAPI Specification are in circulation: 2.0 (known as Swagger), 3.0, and 3.1.
 
-Speakeasy supports OpenAPI versions 3.0 and 3.1 and recommends OpenAPI version 3.1 for all projects. The advantage of OpenAPI version 3.1 is that it's fully compatible with [JSON Schema](https://json-schema.org/), which gives you access to a large ecosystem of tools and libraries.
+Speakeasy supports OpenAPI versions 3.0 and 3.1 and recommends OpenAPI version 3.1 for all projects. The advantage of OpenAPI version 3.1 is its full compatibility with [JSON Schema](https://json-schema.org/), providing access to a large ecosystem of tools and libraries.
 
 ## OpenAPI best practices
 
-OpenAPI has a lot of baked-in flexibility and can describe any HTTP API, including REST APIs and even RPC-based calls. The OpenAPI Specification provides several valid approaches to achieving the same result.
+OpenAPI offers extensive flexibility and can describe any HTTP API, including REST APIs and even RPC-based calls. The OpenAPI Specification provides several valid approaches to achieving the same result.
 
-With so much flexibility, it isn't always obvious how to construct an OpenAPI document that's suitable for code generation. Speakeasy recommends a set of best practices to follow when writing OpenAPI documents. The following sections outline key points to consider as you create your OpenAPI description.
+With this flexibility, constructing an OpenAPI document suitable for code generation requires careful consideration. Speakeasy recommends following specific best practices when writing OpenAPI documents. The sections below outline key points to consider when creating an OpenAPI description.
 
 <ScrollyCoding>
 ## !!steps servers
@@ -98,11 +98,11 @@ components:
 
 ## !!steps tags
 
-The `tags` property contains an optional list of values used to group or categorize a set of operations. We **_strongly recommend_** that you always define `tags` for operations but it&apos;s not required.
+The `tags` property contains an optional list of values used to group or categorize a set of operations. **_Strongly recommended_** to always define `tags` for operations, though not required.
 
 **In code generation**
 
-Tags are used to namespace methods in the SDK. For example, if you have a tag called `drinks`, then all the methods for that tag will be namespaced under `drinks.listDrinks()`. You can create multi-level namespaces by using a `.` in the tag name, for example, `menu.drinks` will become `menu.drinks.listDrinks()`.
+Tags namespace methods in the SDK. For example, with a tag called `drinks`, all methods for that tag will be namespaced under `drinks.listDrinks()`. Create multi-level namespaces by using a `.` in the tag name, for example, `menu.drinks` becomes `menu.drinks.listDrinks()`.
 
 ```yaml ! openapi.yaml
 # !focus(15:16)
@@ -112,13 +112,13 @@ Tags are used to namespace methods in the SDK. For example, if you have a tag ca
 
 ## !!steps operationId
 
-The `operationId` value is a unique identifier for the operation. It **_must_** be unique in the document and is **_case sensitive_**. We **_strongly recommend_** that you always define an `operationId`, but it&apos;s not required.
+The `operationId` value is a unique identifier for the operation. It **_must_** be unique in the document and is **_case sensitive_**. **_Strongly recommended_** to always define an `operationId`, though not required.
 
 **In code generation**
 
-The `operationId` value is used to create the name of the method that will be generated for the operation. We recommend you follow a consistent pattern for naming your operations, for example, `listDrinks`, `createDrink`, `updateDrink`, and `deleteDrink`.
+The `operationId` value creates the name of the method generated for the operation. Follow a consistent pattern for naming operations, for example, `listDrinks`, `createDrink`, `updateDrink`, and `deleteDrink`.
 
-If you are generating your spec from an API framework, ensure that `operationId` values are human-readable. Some frameworks, like FastAPI, create long `operationId` identifiers that result in method names that are not idiomatic.
+When generating a spec from an API framework, ensure `operationId` values are human-readable. Some frameworks, like FastAPI, create long `operationId` identifiers that result in non-idiomatic method names.
 
 ```yaml ! openapi.yaml
 # !focus(17)
@@ -128,7 +128,7 @@ If you are generating your spec from an API framework, ensure that `operationId`
 
 ## !!steps Examples
 
-Adding `Examples` improves the usability of your OpenAPI document by providing examples that illustrate the expected request and response structures.
+Adding `Examples` improves OpenAPI document usability by providing examples that illustrate the expected request and response structures.
 
 ```yaml ! openapi.yaml
 # !focus(28:36)
@@ -152,8 +152,8 @@ Component schemas describe the request and response bodies of operations, servin
 
 **Dedicated Error Classes**
 
-Create dedicated error classes by defining response objects with specific HTTP status codes, such as `400 Bad Request` or `404 Not Found`, accompanied by clear descriptions and structured schemas to convey detailed error information.
-If the name of the error class does not clearly incidate the error type, consider using the `x-speakeasy-name-override` extension to rename it.
+Define dedicated error classes by creating response objects with specific HTTP status codes, such as `400 Bad Request` or `404 Not Found`, accompanied by clear descriptions and structured schemas to convey detailed error information.
+If the error class name doesn't clearly indicate the error type, use the `x-speakeasy-name-override` extension to rename it.
 
 ```yaml ! openapi.yaml
 # !focus(37:42)
@@ -163,7 +163,7 @@ If the name of the error class does not clearly incidate the error type, conside
 
 ## !!steps title
 
-The `title` property provides a human-readable title for each schema, improving the readability of your OpenAPI document.
+The `title` property provides a human-readable title for each schema, improving the readability of the OpenAPI document.
 
 ```yaml ! openapi.yaml
 # !focus(47)
@@ -185,19 +185,19 @@ Use the `description` field to provide clear and concise information about the p
 
 ## Extending OpenAPI
 
-The OpenAPI Specification does not have an exhaustive vocabulary for describing API functionality. To overcome gaps in the specification, you can add several extension fields to an OpenAPI document that describe additional metadata and functionality.
+The OpenAPI Specification lacks an exhaustive vocabulary for describing API functionality. To overcome specification gaps, add extension fields to an OpenAPI document that describe additional metadata and functionality.
 
 Extensions typically follow a naming format of `x-<vendor>-<function>`, where `<vendor>` is the name of the vendor or tool that created the extension and `<function>` is the goal accomplished by the extension.
 
-A [range of Speakeasy extensions](/docs/customize-sdks/) are available to help you prepare an OpenAPI document for code generation. Some of the most commonly used extensions are described below.
+A [range of Speakeasy extensions](/docs/customize-sdks/) help prepare OpenAPI documents for code generation. Some of the most commonly used extensions are described below.
 
 <ScrollyCoding>
 
 ## !!steps x-speakeasy-name-override
 
-Use this extension to override the name of a class, operation, or parameter. The most common use case is to override `operationId` values in your OpenAPI document to simplify the generated SDK method names.
+This extension overrides the name of a class, operation, or parameter. The most common use case is overriding `operationId` values in an OpenAPI document to simplify the generated SDK method names.
 
-If your `operationId` identifiers follow a consistent pattern, you can define the name override globally using a regular expression to match the `operationId` and replace it with a new name.
+When `operationId` identifiers follow a consistent pattern, define the name override globally using a regular expression to match the `operationId` and replace it with a new name.
 
 In this instance, the SDK will contain a method `menu.drinks.list()` rather than the longer `menu.drinks.list_drinks_v2_get()`.
 
@@ -254,9 +254,9 @@ components:
 
 ## !!steps x-speakeasy-group
 
-Sometimes, the `tags` in an OpenAPI document may already be used for an unrelated purpose, such as autogenerating labels in documentation. In this scenario, you may want to use something other than `tags` to organize and group your methods.
+Sometimes, the `tags` in an OpenAPI document may already serve an unrelated purpose, such as autogenerating labels in documentation. In this scenario, using something other than `tags` to organize and group methods may be necessary.
 
-You can add the `x-speakeasy-group` field to any operation in your OpenAPI document to define custom namespaces and override any `tags` associated with the method.
+Add the `x-speakeasy-group` field to any operation in the OpenAPI document to define custom namespaces and override any `tags` associated with the method.
 
 In this case, the `listDrinks` operation is added to a `menu.drinks` namespace rather than a `menu` namespace.
 
@@ -268,9 +268,9 @@ In this case, the `listDrinks` operation is added to a `menu.drinks` namespace r
 
 ## !!steps x-speakeasy-usage-example
 
-Documentation is an important part of any SDK. This extension allows you to choose which operation is featured at the top of your `README.md`.
+Documentation forms an important part of any SDK. This extension allows selecting which operation is featured at the top of the `README.md`.
 
-We recommend that you pick the API operation that your users frequently use. At a Speakeasy, that would likely be getting the list of drinks on offer.
+Select the API operation that users frequently use. At a Speakeasy, that would likely be getting the list of drinks on offer.
 
 ```yaml ! openapi.yaml
 # !focus(20)
@@ -280,7 +280,7 @@ We recommend that you pick the API operation that your users frequently use. At 
 
 ## !!steps x-speakeasy-example
 
-Another useful documentation extension is `x-speakeasy-example`, which allows you to provide an example value to be used in the `Authentication` section of your SDK `README.md`. This example signals to users that they should instantiate the SDK with their security token.
+Another useful documentation extension is `x-speakeasy-example`, which provides an example value to be used in the `Authentication` section of the SDK `README.md`. This example signals to users that the SDK should be instantiated with their security token.
 
 ```yaml ! openapi.yaml
 # !focus(45)
