--- a/docs/prep-openapi/overlays/create-overlays.mdx
+++ b/docs/prep-openapi/overlays/create-overlays.mdx
@@ -1,58 +1,58 @@
 ---
 slug: "/create-overlays"
 sidebar_label: Create Overlays
-description: "Overlays are a quick and easy way to implement changes to your OpenAPI / Swagger spec. We explain how they work and show you how to use overlays."
+description: "Overlays are a quick and easy way to implement changes to an OpenAPI document. Learn how overlays work and how to use them."
 ---
 
 import { ScrollyCoding } from "~/components/codehike/Scrollycoding";
 import { Callout } from "~/components";
 
-# Create Overlays
+# Create overlays
 
-## What Are Overlays?
+## What are overlays?
 
-The [Overlay Specification](https://github.com/OAI/Overlay-Specification/tree/3f398c6d38ddb5b4e514bc6a5a5ec487a3293834) defines a way to create documents to be merged with an OpenAPI description to update it with additional information.
+The [Overlay Specification](https://github.com/OAI/Overlay-Specification/tree/3f398c6d38ddb5b4e514bc6a5a5ec487a3293834) defines a way to create overlay documents to be merged with an OpenAPI document to update it with additional information.
 
-Overlays are particularly useful in scenarios where the same API specification is used for multiple purposes across different workflows or teams. Instead of making direct changes to the primary spec or needing to manage multiple versions, overlays maintain customizations separately.
+Overlays are particularly useful in scenarios where the same OpenAPI document serves multiple purposes across different workflows or teams. Instead of making direct changes to the primary spec or managing multiple versions, overlays maintain customizations separately.
 
-These customizations can then be applied to an OpenAPI specification in a new file, ensuring that the API specifications remain flexible and adaptive without altering the core document.
+These customizations apply to an OpenAPI document in a new file, ensuring API specifications remain flexible and adaptive without altering the core document.
 
-## Common Use Cases
+## Common use cases
 
-Overlays enable a variety of customizations to API specifications. Common scenarios include:
+Overlays enable various customizations to API specifications. Common scenarios include:
 
-- [Adding Speakeasy extensions](/examples/sdk-generation/overlays/overlays#adding-speakeasy-extensions): Enhance API specs with custom Speakeasy extensions for additional functionality or metadata.
-- [Adding examples to API documentation](/examples/sdk-generation/overlays/overlays#adding-examples-to-api-documentation): Provide clear, concrete examples to clarify API usage.
-- [Hiding internal APIs from a public SDK](/examples/sdk-generation/overlays/overlays#hiding-internal-apis-from-a-public-sdk): Exclude internal API endpoints from public-facing SDK documentation for security and clarity.
+- [Adding Speakeasy extensions](/examples/sdk-generation/overlays/overlays#adding-speakeasy-extensions): Enhance OpenAPI documents with custom Speakeasy extensions for additional functionality or metadata
+- [Adding examples to API documentation](/examples/sdk-generation/overlays/overlays#adding-examples-to-api-documentation): Provide clear, concrete examples to clarify API usage
+- [Hiding internal APIs from a public SDK](/examples/sdk-generation/overlays/overlays#hiding-internal-apis-from-a-public-sdk): Exclude internal API endpoints from public-facing SDK documentation for security and clarity
 
 [View more examples here](/examples/sdk-generation/overlays/overlays).
 
-## Creating an Overlay
+## Creating an overlay
 
-Create an overlay by creating a new YAML document that details the specific alterations to make to the OpenAPI specification.
+Create an overlay by writing a new YAML document that specifies the modifications to the OpenAPI document.
 
-With Speakeasy, create overlays manually or automatically.
+Speakeasy supports both manual and automatic overlay creation.
 
-For a quick generation of differences between two API versions, use the `compare` command in the [Speakeasy CLI](/docs/speakeasy-reference/cli/overlay/compare).
+Generate the differences between two OpenAPI document versions with the `compare` command in the [Speakeasy CLI](/docs/speakeasy-reference/cli/overlay/compare).
 
 ```bash
 speakeasy overlay compare --before=./openapi_original.yaml --after=./openapi.yaml > overlay.yaml
 ```
 
 <Callout title="Using compare" variant="info">
-  The compare feature is designed to assist in identifying differences across
-  OpenAPI documents. However, users requiring precise adjustments may need to
-  manually edit the generated overlay file to suit their needs. You can validate
-  and evaluate your JSONPath expressions [here](https://jsonpath.com/).
+  The compare feature helps identify differences across
+  OpenAPI documents. Precise adjustments may require
+  manual refinement of the generated overlay file. Validate
+  and evaluate JSONPath expressions [here](https://jsonpath.com/).
 </Callout>
 
-## Anatomy of an Overlay
+## Anatomy of an overlay
 
 <ScrollyCoding>
 
 #### !!steps `overlay`
 
-**Required:** Specifies the Overlay Specification version used by the document, currently limited to 1.0.0.
+**Required** – Specifies the Overlay Specification version used by the document, currently limited to 1.0.0.
 
 ```yaml ! overlay.yaml
 # !focus(1)
@@ -75,8 +75,8 @@ actions:
 
 #### !!steps `info`
 
-- `title` **Required**: Describes the overlay's purpose.
-- `version` **Required**: Identifies the document's version.
+- `title`: **Required** – Describes the overlay's purpose
+- `version`: **Required** – Identifies the document's version
 
 ```yaml ! overlay.yaml
 # !focus(2:4)
@@ -86,7 +86,7 @@ actions:
 
 #### !!steps `actions`
 
-**Required:** An array of ordered actions for the target document, with at least one object per action.
+**Required** – An array of ordered actions for the target document, with at least one object per action.
 
 ```yaml ! overlay.yaml
 # !focus(5:13)
@@ -96,7 +96,7 @@ actions:
 
 #### !!steps `target`
 
-**Required:** Specifies a JSONPath query expression to identify the target objects in the target document.
+**Required** – Specifies a JSONPath query expression to identify the target objects in the target document.
 
 ```yaml ! overlay.yaml
 # !focus(6)
@@ -106,7 +106,7 @@ actions:
 
 #### !!steps `description`
 
-**Optional:** Brief explanation of the action being performed. Supports CommonMark syntax for rich text representation.
+**Optional** – Brief explanation of the action being performed. Supports CommonMark syntax for rich text representation.
 
 ```yaml ! overlay.yaml
 # !focus(7)
@@ -116,7 +116,7 @@ actions:
 
 #### !!steps `update`
 
-**Optional:** Defines the properties and values to be merged with the objects identified by the target. This property is disregarded if the `remove` property is set to `true`.
+**Optional** – Defines the properties and values to merge with the objects identified by the target. This property is disregarded if the `remove` property is set to `true`.
 
 ```yaml ! overlay.yaml
 # !focus(8:10)
@@ -126,7 +126,7 @@ actions:
 
 #### !!steps `remove`
 
-**Optional:** A boolean value indicating whether the target object should be removed from its map or array. Defaults to `false` if not specified.
+**Optional** – A boolean value indicating whether to remove the target object from its map or array. Defaults to `false` if not specified.
 
 ```yaml ! overlay.yaml
 # !focus(13)
@@ -138,9 +138,9 @@ actions:
 
 ## Helpful references:
 
-- [Common Overlay Examples](/examples/sdk-generation/overlays/overlays)
-- [Common JSON Path Examples](/examples/sdk-generation/overlays/overlays)
+- [Common overlay examples](/examples/sdk-generation/overlays/overlays)
+- [Common JSONPath examples](/examples/sdk-generation/overlays/json-path-expressions)
 
-<Callout title="Try Overlay Speakeasy" variant="info">
-  For a visual approach to creating or editing your overlays, visit <a href="https://overlay.speakeasy.com/" target="_blank" rel="noopener noreferrer">overlay.speakeasy.com</a>.
+<Callout title="Try Speakeasy's OpenAPI Overlay Playground" variant="info">
+  For a visual approach to creating or editing overlays, visit <a href="https://overlay.speakeasy.com/" target="_blank" rel="noopener noreferrer">overlay.speakeasy.com</a>.
 </Callout>
