--- a/docs/privacy-policy.mdx
+++ b/docs/privacy-policy.mdx
@@ -133,7 +133,7 @@ Other rights you have include the rights to:
 
 ## Changes to our Privacy Policy
 
-If we decide to change our privacy policy, we will post those changes on this page. If we are going to use Personal Data collected through the Site in a manner materially different from that stated at the time of collection, then we will notify users via email and/or by posting a notice on our Site for 30 days prior to such use or by other means as required by law.
+If you would like to submit a data rights request (also known as a data subject access request), or have any other questions, comments, or concerns about this privacy policy, please contact us at  info@speakeasy.com or via mail at 90 New Montgomery Street Suite 700, San Francisco, CA 94105.
 
 ## Jurisdiction-specific Provisions
 
