--- a/docs/supported/openapi.mdx
+++ b/docs/supported/openapi.mdx
@@ -3,32 +3,32 @@ title: "OpenAPI Support Matrix"
 description: "An overview of OpenAPI features supported by Speakeasy for SDK generation."
 ---
 
-# OpenAPI Support Matrix
+# OpenAPI support matrix
 
-The tables below give an overview of what we support from OpenAPI.
+The tables below provide an overview of the OpenAPI features supported by Speakeasy.
 
-## ✅ Server Configuration
+## ✅ Server configuration
 
-| Name | Notes | Swagger Link |Support |
+| Name | Notes | Swagger link |Support |
 |------|-------|--------------|--------|
-| ServerURL config | Global and per-method (include base URL and templating) | [api-host-and-base-path](https://swagger.io/docs/specification/api-host-and-base-path/) |✅ |
-| Authentication and security | Global and per-method | [authentication](https://swagger.io/docs/specification/authentication/) |✅ |
+| ServerURL config | Global and per-method (include base URL and templating) | [API server and base path](https://swagger.io/docs/specification/api-host-and-base-path/) |✅ |
+| Authentication and security | Global and per-method | [Authentication](https://swagger.io/docs/specification/authentication/) |✅ |
 | Method generation |  |   |✅ |
 | Model generation |  Request and response |   |✅ |
 
-## ⚠️ Path Parameters Serialization ([path-parameters](https://swagger.io/docs/specification/describing-parameters/#path-parameters))
+## ⚠️ Path parameters serialization ([Path parameters](https://swagger.io/docs/specification/describing-parameters/#path-parameters))
 
-| Name | Notes | Swagger Link | Support |
+| Name | Notes | Swagger link | Support |
 |------|-------|--------------|---------|
-| Default | `(style = simple, explode = false)` | [serialization/#path](https://swagger.io/docs/specification/serialization/#path/) | ✅ |
+| Default | `(style = simple, explode = false)` | [Parameter serialization](https://swagger.io/docs/specification/serialization/#path/) | ✅ |
 | Basic types | | | ✅ |
 | Simple objects | | | ✅ |
 | `label` | | | ❌ |
 | `matrix` | | | ❌ |
 
-## ⚠️ Query Parameters Serialization ([query-parameters](https://swagger.io/docs/specification/describing-parameters/#query-parameters) & [query](https://swagger.io/docs/specification/describing-parameters/#query))
+## ⚠️ Query parameters serialization ([Query parameters](https://swagger.io/docs/specification/describing-parameters/#query-parameters) and [query](https://swagger.io/docs/specification/describing-parameters/#query))
 
-| Name | Notes | Swagger Link | Support |
+| Name | Notes | Swagger link | Support |
 |------|-------|--------------|---------|
 | `json` | | | ✅ |
 | `form` | | | ✅ |
@@ -38,46 +38,46 @@ The tables below give an overview of what we support from OpenAPI.
 | Basic types | | | ✅ |
 | Simple objects | | | ✅ |
 
-## ✅  Request Headers ([header](https://swagger.io/docs/specification/serialization/#header))
+## ✅  Request headers ([Header](https://swagger.io/docs/specification/serialization/#header))
 
-| Name | Notes | Swagger Link | Support |
+| Name | Notes | Swagger link | Support |
 |------|-------|--------------|---------|
 | Simple (explode = true)| | | ✅ |
 | Simple (explode = false)| | | ✅ |
 
-## ⚠️  Request Body Serialization
+## ⚠️  Request body serialization
 
-| Name | Notes | Swagger Link | Support |
+| Name | Notes | Swagger link | Support |
 |------|-------|--------------|---------|
-| Multipart encoding | | [multi-part requests](https://swagger.io/docs/specification/describing-request-body/multipart-requests/)| ✅ |
+| Multipart encoding | | [Multipart requests](https://swagger.io/docs/specification/describing-request-body/multipart-requests/)| ✅ |
 | Binary| | | ✅ |
 | Form data | | | ✅ |
 | JSON | Both `application/json` and `text/json`| | ✅ |
-| `x-www-form-urlencoded` |  Including encoding, but not non-object types | [describing-request-body](https://swagger.io/docs/specification/describing-request-body)| ⚠️ |
+| `x-www-form-urlencoded` |  Including encoding, but not non-object types | [Describing request body](https://swagger.io/docs/specification/describing-request-body)| ⚠️ |
 | Plain text | | | ✅ |
 | Raw byte | | | ✅ |
 | Handling `required` body | | | ✅ |
 | XML | | | ❌ |
 | Other media types| | | ❌ |
 
-## ⚠️  Response Body Deserialization
+## ⚠️  Response body deserialization
 
-| Name | Notes | Swagger Link | Support |
+| Name | Notes | Swagger link | Support |
 |------|-------|--------------|---------|
-| Return StatusCode and Content-Type | | | ✅ |
+| Return `StatusCode` and `Content-Type` | | | ✅ |
 | JSON | | | ✅ |
 | Plain text | | | ✅ |
 | Raw byte | | | ✅ |
 | JSON | | | ✅ |
 | Other media types| | | ❌ |
 
-## ✅ Media-Type Patterns ([media-types](https://swagger.io/docs/specification/media-types))
+## ✅ Media-type patterns ([Media types](https://swagger.io/docs/specification/media-types))
 
-## ✅ Datatypes
+## ✅ Data types
 
-| Name | Notes | Swagger Link | Support |
+| Name | Notes | Swagger link | Support |
 |------|-------|--------------|---------|
-| Basic types | | [data-models/data-types](https://swagger.io/docs/specification/data-models/data-types/)| ✅ |
+| Basic types | | [Data models: Data types](https://swagger.io/docs/specification/data-models/data-types/)| ✅ |
 | Enums | | | ✅ |
 | Number formats | float, double, int32, int64 | | ✅ |
 | Date-time | | | ✅ |
@@ -87,19 +87,19 @@ The tables below give an overview of what we support from OpenAPI.
 | Optional | | | ✅ |
 | Maps | | | ✅ |
 | Any type | | | ✅ |
-| OneOf/AnyOf/AllOf |  |[oneof-anyof-allof-not](https://swagger.io/docs/specification/data-models/oneof-anyof-allof-not/)| ⚠️ See `union type` support below |
+| `OneOf`, `AnyOf`, and `AllOf` |  |[oneOf, anyOf, allOf, not](https://swagger.io/docs/specification/data-models/oneof-anyof-allof-not/)| ⚠️ See `union type` support below |
 
-### ✅ Union Types
+### ✅ Union types
 
-| Name | Notes | Language Support |
+| Name | Notes | Language support |
 |------|-------|---------|
-| `oneOf` | For languages we haven't yet developed native Union type support for. `oneOf` will be treated as an `any` type. | ✅ TS, Python, Go, C#, Java, Php  |
+| `oneOf` | For languages that don't yet have native union type support in Speakeasy, `oneOf` will be treated as an `any` type. | ✅ TypeScript, Python, Go, C#, Java, PHP  |
 | `allOf` | To avoid construction of illogical types, Speakeasy currently constructs an object using the superset of fields from the listed schemas. In cases where the base schemas have a field name collision, Speakeasy will default to using the field from the object deepest in the list. | ✅ All languages  |
-| `anyOf` | `anyOf` is treated as `oneOf` to avoid the bloat of combinatorial data type creation. | ✅ TS, Python, Go  |
+| `anyOf` | `anyOf` is treated as `oneOf` to avoid the bloat of combinatorial data type creation. | ✅ TypeScript, Python, Go  |
 
 ## ✅  Miscellaneous
 
-| Name | Notes | Swagger Link | Support |
+| Name | Notes | Swagger link | Support |
 |------|-------|--------------|---------|
 | Auxiliary files* | | | ✅ |
 | `x-speakeasy-server-id` generation | | | ✅ |
@@ -107,6 +107,6 @@ The tables below give an overview of what we support from OpenAPI.
 | README generation | | | ✅ |
 | Documentation generation | | | ✅ |
 
-\* Utility classes and functions to help with serialization and deserialization.
+
 
 \* Files needed for creating a fully compilable package that can be published to the relevant package manager without further changes.
