--- a/docs/testing.mdx
+++ b/docs/testing.mdx
@@ -10,55 +10,63 @@ import { LanguageTestingGrid } from "~/features/shared/recipes";
 
 <Callout title="INFO" variant="info">
 
-  Testing features are in early access. Breaking changes may occur.
+  Speakeasy's testing features are in early access. Breaking changes may occur.
 
 </Callout>
 
-Speakeasy enables you to verify SDK and API functionality by generating and running SDK tests and API tests. Our solution scales from per-operation SDK tests to end-to-end API tests for validating any multi-step API user journey.
+With Speakeasy, you can verify functionality by generating and running tests for both SDKs and APIs. Our solution scales from per-operation SDK tests to end-to-end API tests to validate any multi-step API user journey.
 
-## Design Philosophy
+## Design philosophy
 
-Similar to our [SDK design philosophy](/docs/languages/philosophy), we strive to have best-in-class development experience for Contract testing as well:
+Just as with our [SDK design philosophy](/docs/languages/philosophy), Speakeasy strives to deliver a best-in-class development experience for contract testing. Speakeasy's contract tests are designed to be:
 
-- **Human readable** - Generated tests are easy for developers to read and debug. We avoid convoluted abstractions.
-- **Batteries-included** - Generated tests for all SDK operations and a real API testing environment is optional. A generated mock API server works out of the box to avoid complex test environment setup, such as data seeding.
-- **Rich coverage** - Automatically generated contract tests verify all possible data fields to ensure full coverage. If data examples are not available, realistic example values for the field are used based on naming, type, and format information.
-- **Customizable** - Custom tests are supported beside generated tests.
-- **Minimal dependencies** - We start with native language libraries and layer on third-party libraries only when the customer benefits far outweigh the cost of the extra dependency. We avoid adding unnecessary dependencies.
-- **Easy integration** - Integrating our testing should fit into your existing API development and testing workflows.
-- **Open standards** - No vendor lock-in necessary.
+- **Human readable:** Speakeasy-generated tests avoid convoluted abstractions and are easy for developers to read and debug. 
+- **Batteries-included:** Tests are generated for all SDK operations, with the option to use a real API testing environment. A generated mock API server works out of the box, avoiding complex test environment setups, such as data seeding.
+- **Rich in coverage:** Automatically generated contract tests verify all possible data fields to ensure full coverage. If data examples are not available, realistic example values for the field are used based on name, type, and format information.
+- **Customizable:** Custom tests are supported beside generated tests.
+- **Minimal dependencies:** Speakeasy avoids adding unnecessary dependencies, prioritizing native language libraries and incorporating third-party libraries only when the customer benefits far outweigh the cost of the extra dependency.
+- **Easy integration:** Speakeasy testing easily integrates into your existing API development and testing workflows.
+- **Open standards:** No vendor lock-in necessary.
 
 ## Features
 
 Speakeasy's test generation uses the [Arazzo Specification](/openapi/arazzo) to generate tests for your API. Arazzo is a simple, human-readable, and extensible specification for defining API workflows.
-With Arazzo powering test generation, Speakeasy provides the following features:
 
-- Automatically generate contract tests for every operation in your OpenAPI specification.
-  - A `.speakeasy/tests.arazzo.yaml` file is generated or modified to include tests for your operations.
-  - Use examples available in your OpenAPI document or autogenerates examples based on the field name, type, and format of your schemas.
-  - Generates a mock server capable of responding to the API requests, making the tests functional.
-- Define custom tests & workflows for any use case and define rich tests capable of:
+Speakeasy's Arazzo-powered test generation provides the following features:
+
+- Automatically generated contract tests for every operation in your OpenAPI document, including:
+  - Generating or modifying a `.speakeasy/tests.arazzo.yaml` file to include tests for operations.
+  - Using examples available in your OpenAPI document or autogenerating examples based on the field name, type, and format of your schemas.
+  - Generating a mock server capable of responding to API requests, making the tests functional.
+- Custom tests and workflows for any use case, with rich testing capabilities, such as:
   - Testing multiple operations.
   - Testing different inputs.
   - Validating the correct response is returned.
-  - Run against a real API or mock server.
-  - Configure setup and teardown routines for complex E2E tests.
+  - Running tests against a real API or mock server.
+  - Configuring setup and teardown routines for complex E2E tests.
 
 ## Prerequisites
 
-The following are requirements for enabling testing features:
+To enable testing features, you need the following:
 
-- Existing, successfully generating SDK.
-- [Speakeasy CLI](/docs/speakeasy-reference/cli/getting-started) or GitHub repository with Actions enabled.
-- [Docker](https://www.docker.com/) or equivalent container runtime, if using the mock server for local testing.
-- [Enterprise or Business tier account](/pricing).
-- The SDK Tests Add-On is enabled.
+- An existing, successfully generating SDK.
+- The [Speakeasy CLI](/docs/speakeasy-reference/cli/getting-started) or a GitHub repository with Actions enabled.
+- [Docker](https://www.docker.com/) or an equivalent container runtime (if using the mock server for local testing).
+- An [Enterprise or Business tier account](/pricing).
+- Enable the SDK Testing add-on in `settings/billing` under your account.
+
+<Screenshot
+  darkened
+  url="app.speakeasy.com"
+>
+  ![SDK Testing add on in the Speakeasy dashboard.](./assets/sdk-testing-billing.png)
+</Screenshot>
 
 <LanguageTestingGrid />
 
 ## Next Steps
 
-- [Bootstrapping SDK Tests](/docs/customize-testing/bootstrapping-test-generation)
+- [Bootstrapping SDK tests](/docs/customize-testing/bootstrapping-test-generation)
 - [Customize your SDK tests](/docs/customize-testing/customizing-sdk-tests)
-- [Setup testing in GitHub Actions](/docs/customize-testing/github-actions)
-- [Configure Custom API Contract Tests](/docs/api-contract-tests)
+- [Set up testing in GitHub Actions](/docs/customize-testing/github-actions)
+
